--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-20 [联合国人权高专办：以色列对加沙的空袭可能违反了“战争法”](/articles/voa/1014719.md)
+
+6-20 [推特上的中国：厄瓜多尔不再对中国人免签，“走线”时代结束？](/articles/voa/1014720.md)
+
 6-20 [美国务卿与菲外长通话，讨论中国“在南中国海针对菲律宾的升级行动”](/articles/voa/1014721.md)
 
 6-20 [被军方拘押的昂山素季度过79岁生日，其子表示“担忧”](/articles/voa/1014722.md)
@@ -596,8 +600,4 @@
 6-8 [美国智库报告 越南正加快南中国海的填海造岛步伐](/articles/voa/1015017.md)
 
 6-8 [拜登在二战战场遗址呼吁在支持乌克兰问题上保持团结](/articles/voa/1015018.md)
-
-6-8 [布林肯星期日再访中东以期重启停火谈判](/articles/voa/1015019.md)
-
-6-8 [丹麦首相在哥本哈根被一男子袭击](/articles/voa/1015020.md)
 
