--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-20 [专家：普京的访问使越南处于“困难境地”且“没有突破”](/articles/voa/1014716.md)
+
+6-20 [乌克兰称其能源设施在俄军袭击中受损](/articles/voa/1014717.md)
+
+6-20 [全美国第四次庆祝六月节](/articles/voa/1014718.md)
+
 6-20 [联合国人权高专办：以色列对加沙的空袭可能违反了“战争法”](/articles/voa/1014719.md)
 
 6-20 [推特上的中国：厄瓜多尔不再对中国人免签，“走线”时代结束？](/articles/voa/1014720.md)
@@ -594,10 +600,4 @@
 6-8 [联合国:乌克兰5月伤亡人数为近1年来最高](/articles/voa/1015014.md)
 
 6-8 [TikTok母公司字节跳动计划投入21亿美元在马来西亚投资人工智能](/articles/voa/1015015.md)
-
-6-8 [普京:没有必要对乌克兰进行核打击](/articles/voa/1015016.md)
-
-6-8 [美国智库报告 越南正加快南中国海的填海造岛步伐](/articles/voa/1015017.md)
-
-6-8 [拜登在二战战场遗址呼吁在支持乌克兰问题上保持团结](/articles/voa/1015018.md)
 
