--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-20 [全球自由贸易是一个错误吗？](/articles/nyt/1042661.md)
+
 6-19 [英伟达超越微软，成为全球市值最高公司](/articles/nyt/1042662.md)
 
 6-19 [热爱“组团”理财的韩国人：一起存钱一起花](/articles/nyt/1042663.md)
@@ -598,6 +600,4 @@
 3-13 [从戴安娜到凯特，陷于舆论风暴中心的王室成员](/articles/nyt/1042959.md)
 
 3-13 [中国出口激增，引发欧美国家警惕与担忧](/articles/nyt/1042960.md)
-
-3-12 [四年后，我们有多了解新冠？](/articles/nyt/1042961.md)
 
