--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+6-20 [俄朝签署安全协议，朝鲜半岛无核化努力成空？](/articles/nyt/1042659.md)
+
+6-20 [活宝罗根与弗兰科谈《刺杀金正恩》](/articles/nyt/1042660.md)
+
 6-20 [全球自由贸易是一个错误吗？](/articles/nyt/1042661.md)
 
 6-19 [英伟达超越微软，成为全球市值最高公司](/articles/nyt/1042662.md)
@@ -596,8 +600,4 @@
 3-13 [国际芯片企业为何涌向马来西亚](/articles/nyt/1042957.md)
 
 3-13 [波音“吹哨人”死亡，疑因“自残枪伤”](/articles/nyt/1042958.md)
-
-3-13 [从戴安娜到凯特，陷于舆论风暴中心的王室成员](/articles/nyt/1042959.md)
-
-3-13 [中国出口激增，引发欧美国家警惕与担忧](/articles/nyt/1042960.md)
 
