--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-20 [朝鲜称与俄罗斯的条约提供全面性共同防御](/articles/voa/1014712.md)
+
 6-20 [普京访问越南欲深化莫斯科与河内关系](/articles/voa/1014713.md)
 
 6-20 [秘鲁的平衡之举—钱凯港项目引发中美博弈](/articles/voa/1014714.md)
@@ -598,6 +600,4 @@
 6-8 [脱钩之势推动下，美中资本正远离对方市场](/articles/voa/1015010.md)
 
 6-8 [前银行家罗奇坚称香港“玩完了”](/articles/voa/1015011.md)
-
-6-8 [乌克兰和摩尔多瓦准备启动加入欧盟的正式谈判](/articles/voa/1015012.md)
 
