--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-20 [菲律宾军方公布视频，指责中国海警在南中国海的行为是“赤裸裸的侵略”](/articles/voa/1014711.md)
+
 6-20 [朝鲜称与俄罗斯的条约提供全面性共同防御](/articles/voa/1014712.md)
 
 6-20 [普京访问越南欲深化莫斯科与河内关系](/articles/voa/1014713.md)
@@ -598,6 +600,4 @@
 6-8 [土耳其宣布对进口中国汽车加征40%关税](/articles/voa/1015009.md)
 
 6-8 [脱钩之势推动下，美中资本正远离对方市场](/articles/voa/1015010.md)
-
-6-8 [前银行家罗奇坚称香港“玩完了”](/articles/voa/1015011.md)
 
