--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-20 [【404文库】建设性意见｜中联部部长在海参崴出席“抵制新殖民主义”论坛，让我非常困惑](/articles/cdt/339481.md)
+
 6-20 [每日一语 2024.6.19](/articles/cdt/339489.md)
 
 6-19 [澎湃人物｜10名农妇，搭上致命冷藏车](/articles/cdt/339491.md)
@@ -598,6 +600,4 @@
 5-15 [贝壳财经｜居民用电涨价”被辟谣背后，谁来决定电价](/articles/cdt/340698.md)
 
 5-15 [劳务宏观笔记｜农民工监测数据解读之二：制造业和建筑业农民工收入增速创历年最低](/articles/cdt/340701.md)
-
-5-15 [一席｜读书能够改变命运吗？我不知道，但我只有这一条路了｜谢爱磊 一席第1059位讲者](/articles/cdt/340702.md)
 
