--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-20 [三中全會在即 習近平重申反貪腐](/articles/dw/1025160.md)
+
 6-20 [「普金」關係深化 習近平冷眼旁觀？](/articles/dw/1025161.md)
 
 6-19 [德国经济部长的中国之行任务棘手](/articles/dw/1025162.md)
@@ -598,6 +600,4 @@
 5-24 [被控从事间谍活动 港驻英官员明年2月受审](/articles/dw/1025458.md)
 
 5-24 [德國國會大廈：零距離體驗民主政治](/articles/dw/1025459.md)
-
-5-24 [日韩宣布制裁朝俄武器生意的参与者](/articles/dw/1025460.md)
 
