--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-20 [美中将就禁毒合作举行高级别会谈](/articles/voa/1014709.md)
+
 6-20 [美军打击胡塞武装据点：应对红海袭击升级](/articles/voa/1014710.md)
 
 6-20 [菲律宾军方公布视频，指责中国海警在南中国海的行为是“赤裸裸的侵略”](/articles/voa/1014711.md)
@@ -598,6 +600,4 @@
 6-8 [以军成功救出四名人质，甘茨推迟发布辞职声明](/articles/voa/1015007.md)
 
 6-8 [专访林培瑞：六四35周年，西方离看穿中共还有相当距离](/articles/voa/1015008.md)
-
-6-8 [土耳其宣布对进口中国汽车加征40%关税](/articles/voa/1015009.md)
 
