--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-20 [中国南方遭暴雨袭击，江河湖库水位暴涨恐酿更多旱涝灾害](/articles/voa/1014706.md)
+
+6-20 [欧中贸易战升级，北京警告可能对进口欧盟猪肉征收报复性临时反倾销关税](/articles/voa/1014707.md)
+
 6-20 [韩国扣押一艘疑似违反联合国对朝制裁货船](/articles/voa/1014708.md)
 
 6-20 [美中将就禁毒合作举行高级别会谈](/articles/voa/1014709.md)
@@ -596,8 +600,4 @@
 6-9 [以色列救出四名人质并打死数百名巴勒斯坦人](/articles/voa/1015004.md)
 
 6-9 [印度总理莫迪开启第三任期 分析:印中关系可望和缓，但互信仍低](/articles/voa/1015005.md)
-
-6-9 [欧盟官员访华举行人权对话，罕见获准实地考察西藏](/articles/voa/1015006.md)
-
-6-8 [以军成功救出四名人质，甘茨推迟发布辞职声明](/articles/voa/1015007.md)
 
