--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-20 [德外长出席DW全球媒体论坛 警告AI加剧不平等](/articles/dw/1025150.md)
+
+6-20 [谈球员肤色 德国副议长删帖又道歉](/articles/dw/1025151.md)
+
 6-20 [欧盟就新一轮对俄制裁达成一致 中企榜上有名](/articles/dw/1025152.md)
 
 6-20 [俄罗斯朝鲜防务互助意味着什么？](/articles/dw/1025153.md)
@@ -596,8 +600,4 @@
 5-25 [华语电影重返戛纳](/articles/dw/1025448.md)
 
 5-25 [G7：德财长称援乌资金尚须讨论细节 警告对华贸易战](/articles/dw/1025449.md)
-
-5-25 [国际法院要求以色列立刻停止在拉法的军事行动](/articles/dw/1025450.md)
-
-5-25 [美国批准再向乌克兰提供2.75亿军援](/articles/dw/1025451.md)
 
