--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-21 [韩国严厉谴责俄朝战略条约，考虑向乌克兰提供武器](/articles/voa/1014701.md)
+
+6-21 [中印民航客机直航中断四年后，新德里仍拒绝北京复航呼吁](/articles/voa/1014702.md)
+
 6-20 [北京要求达赖喇嘛“彻底改正”政治主张后才会与他恢复对话](/articles/voa/1014703.md)
 
 6-20 [普京访越签署一系列合作协议，河内试图在地缘政治敌对国之间施展平衡术](/articles/voa/1014704.md)
@@ -596,8 +600,4 @@
 6-9 [欧中贸易紧张加剧之际 中共官媒称中企寻求对欧盟进口乳制品反补贴调查](/articles/voa/1014999.md)
 
 6-9 [乌克兰与俄罗斯用无人机相互攻击，在俄占区打死几十人](/articles/voa/1015000.md)
-
-6-9 [南海紧张局势下菲律宾宣称安全独立](/articles/voa/1015001.md)
-
-6-9 [美国议员们因中国来源要求审查NewsBreak应用](/articles/voa/1015002.md)
 
