--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,16 @@
 美国之音
 ------
 
+6-21 [美国要求越南支持乌克兰的主权和领土完整](/articles/voa/1014690.md)
+
+6-21 [美国寻求阻止以色列与真主党之间的军事升级](/articles/voa/1014691.md)
+
+6-21 [救援物资重新通过美国建造的临时码头进入加沙](/articles/voa/1014692.md)
+
+6-21 [习近平的军队政治整训: 清除异己、强化军权](/articles/voa/1014693.md)
+
+6-21 [耶伦：对华新关税是“高度战略性的” 拒绝让美企因“中国协调采取的倾销措施”而破产](/articles/voa/1014694.md)
+
 6-21 [中国是否破坏了乌克兰和平峰会？](/articles/voa/1014695.md)
 
 6-21 [人权组织联署呼吁联合国就新疆报告做出更新并采取行动](/articles/voa/1014696.md)
@@ -590,14 +600,4 @@
 6-10 [反送中运动五周年纪念 香港人慨叹东方之珠变得陌生](/articles/voa/1014988.md)
 
 6-9 [白宫拒绝说明拜登下月是否会在华盛顿会晤内塔尼亚胡](/articles/voa/1014989.md)
-
-6-9 [瑞典担忧由中国控制瑞典风电的风险](/articles/voa/1014990.md)
-
-6-9 [乌克兰称首次击毁俄罗斯一架苏-57第五代隐形战机](/articles/voa/1014991.md)
-
-6-9 [台湾合法同婚独漏两岸伴侣 同志: 成为同婚孤儿，难过与不解](/articles/voa/1014992.md)
-
-6-9 [天然气管道协议陷僵局 中俄“无上限”友谊受考验？](/articles/voa/1014993.md)
-
-6-9 [印度总理莫迪将与联盟盟友一起宣誓就职](/articles/voa/1014994.md)
 
