--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-21 [中国华南地区再遇暴雨洪水](/articles/dw/1025148.md)
+
 6-21 [中美举行禁毒合作高级别会谈](/articles/dw/1025149.md)
 
 6-20 [德外长出席DW全球媒体论坛 警告AI加剧不平等](/articles/dw/1025150.md)
@@ -598,6 +600,4 @@
 5-26 [客座评论：普京向北京作出的无奈之举](/articles/dw/1025446.md)
 
 5-26 [德国基本法，生日快乐！](/articles/dw/1025447.md)
-
-5-25 [华语电影重返戛纳](/articles/dw/1025448.md)
 
