--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-21 [美俄中会重启核试验吗](/articles/nyt/1042653.md)
+
 6-21 [面对俄朝条约，韩国日本的恐慌和忧虑](/articles/nyt/1042654.md)
 
 6-21 [酸辣粉和酸菜鱼：更多内地餐馆涌入香港](/articles/nyt/1042655.md)
@@ -598,6 +600,4 @@
 3-15 [关于俄罗斯总统大选投票，你应该知道的](/articles/nyt/1042951.md)
 
 3-15 [打造星链替代品：台湾的人造卫星网络计划](/articles/nyt/1042952.md)
-
-3-15 [封禁TikTok不能解决任何问题](/articles/nyt/1042953.md)
 
