--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-21 [美中罕见半官方核对话，中国据称承诺不对台湾动用核武器](/articles/voa/1014687.md)
+
 6-21 [特朗普提议为外国毕业生自动发放绿卡，意外转变移民立场](/articles/voa/1014688.md)
 
 6-21 [中国总理李强结束亚太魅力攻势之行，结果好坏参半](/articles/voa/1014689.md)
@@ -598,6 +600,4 @@
 6-10 [伦敦举行“反送中”五周年纪念活动：呼吁制裁港官、关闭经贸办](/articles/voa/1014985.md)
 
 6-10 [反送中五周年台港社运人士在台北游行纪念，高唱《愿荣光归香港》](/articles/voa/1014986.md)
-
-6-10 [路透：七国集团峰会将对协助俄罗斯的中国小银行发出新警告](/articles/voa/1014987.md)
 
