--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-21 [美訪團會達賴後見莫迪 藏人籲北京重啟談判](/articles/dw/1025145.md)
+
 6-21 [路透：中美舉行核會談 中方稱對台不訴諸核武](/articles/dw/1025146.md)
 
 6-21 [香港反修例運動5週年：出獄少年們為何無悔青春？](/articles/dw/1025147.md)
@@ -598,6 +600,4 @@
 5-26 [解码中国：谁将塑造互联网的未来？](/articles/dw/1025443.md)
 
 5-26 [危地马拉总统：中国拒绝货物入境或与对台邦交有关](/articles/dw/1025444.md)
-
-5-26 [昔日仇敌 今日盟友](/articles/dw/1025445.md)
 
