--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-21 [世界媒体看中国 - 房市行情再下探](/articles/voa/1014682.md)
+
 6-21 [韩国召见俄罗斯大使，抗议朝俄新防御条约](/articles/voa/1014683.md)
 
 6-21 [人民币汇率跌至7个月来新低](/articles/voa/1014684.md)
@@ -598,6 +600,4 @@
 6-10 [白宫：乌克兰打击俄罗斯目标后，俄罗斯在哈尔科夫的推进陷入停滞](/articles/voa/1014980.md)
 
 6-10 [美中人工智能竞争打到中东 海湾国家两边通吃？](/articles/voa/1014981.md)
-
-6-10 [沃尔沃将电动汽车生产转移到比利时以避免中国关税](/articles/voa/1014982.md)
 
