--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-21 [哈贝克：德国对华战略需要“更新”](/articles/dw/1025142.md)
+
 6-21 [哈贝克：访华期间不可能解决欧中贸易冲突](/articles/dw/1025143.md)
 
 6-21 [产能外迁中国仍标“意大利制造”?罚款!](/articles/dw/1025144.md)
@@ -598,6 +600,4 @@
 5-26 [中国军演后 赖清德：期待与中国合作](/articles/dw/1025440.md)
 
 5-26 [台海紧张局势之下 中日韩举行峰会](/articles/dw/1025441.md)
-
-5-26 [德国政治动机犯罪数量达新高](/articles/dw/1025442.md)
 
