--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-22 [德中经贸面临更多不确定性，权威媒体看好德美经贸前景](/articles/voa/1014676.md)
+
+6-22 [中菲南中国海最新冲突后，菲律宾表示没有考虑援用美菲《共同防御条约》](/articles/voa/1014677.md)
+
+6-22 [中国新规“惩治台独”罪可判死，台湾专家:威吓效果有限](/articles/voa/1014678.md)
+
 6-21 [日本宣布对帮助俄罗斯的中港企业进行制裁](/articles/voa/1014679.md)
 
 6-21 [越南表示愿与菲律宾就双方南中国海大陆架主张重叠问题展开对话](/articles/voa/1014680.md)
@@ -594,10 +600,4 @@
 6-10 [俄媒：普京可能很快在6月访问朝鲜和越南](/articles/voa/1014974.md)
 
 6-10 [美国驻悉尼领事馆遭涂鸦砸玻璃 澳大利亚总理予以谴责](/articles/voa/1014975.md)
-
-6-10 [平壤核武威胁日增 韩美召开新一轮核咨商小组会议](/articles/voa/1014976.md)
-
-6-10 [欧洲议会选举初步计票：中间派稳定过半、右翼政党大有斩获](/articles/voa/1014977.md)
-
-6-10 [美国呼吁安理会表决支持其加沙停火计划](/articles/voa/1014978.md)
 
