--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-22 [中国南方强降雨破历史纪录，广东省一市至少有47人在洪涝灾害中死亡](/articles/voa/1014673.md)
+
+6-22 [国会改革覆议案败阵 台湾民进党:决战释宪](/articles/voa/1014674.md)
+
+6-22 [不满美国对台军售，中国宣布对美国军工巨头洛马及三名高管实施制裁](/articles/voa/1014675.md)
+
 6-22 [德中经贸面临更多不确定性，权威媒体看好德美经贸前景](/articles/voa/1014676.md)
 
 6-22 [中菲南中国海最新冲突后，菲律宾表示没有考虑援用美菲《共同防御条约》](/articles/voa/1014677.md)
@@ -594,10 +600,4 @@
 6-10 [中国秀巷战机器狗威吓台湾，军事专家:战场实用性待商榷](/articles/voa/1014971.md)
 
 6-10 [聿文视界：台湾也是美国的“核心利益”](/articles/voa/1014972.md)
-
-6-10 [新西兰总理表示欢迎中国总理李强本星期到访](/articles/voa/1014973.md)
-
-6-10 [俄媒：普京可能很快在6月访问朝鲜和越南](/articles/voa/1014974.md)
-
-6-10 [美国驻悉尼领事馆遭涂鸦砸玻璃 澳大利亚总理予以谴责](/articles/voa/1014975.md)
 
