--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -15,6 +15,12 @@
 
 6-22 [唐师三百手｜复旦又出幺蛾子，毕业生挥拳打老师](/articles/cdt/339459.md)
 
+6-22 [冷杉RECORD｜在农村，那些不被看见的精神障碍女性](/articles/cdt/339460.md)
+
+6-22 [欧钦平｜律师和记者，为什么这两个职业越来越难](/articles/cdt/339461.md)
+
+6-22 [知识分子｜中文互联网内容真的正在衰退吗？](/articles/cdt/339462.md)
+
 6-20 [【404文库】风慢慢｜“弹尽粮绝”组合，是当代慕容复与段延庆](/articles/cdt/339467.md)
 
 6-20 [天涯行路｜桂林洪水上热搜的时候，“正在退水”也上热搜了](/articles/cdt/339469.md)
@@ -594,10 +600,4 @@
 5-17 [冷杉RECORD｜最后一批“80后”，正在挣扎上岸](/articles/cdt/340662.md)
 
 5-16 [南风窗｜50岁，工地发不了工资](/articles/cdt/340665.md)
-
-5-16 [后代聊斋｜灾难面前，苏联这一招加速了这个大国的解体](/articles/cdt/340667.md)
-
-5-16 [风慢慢｜怎么解释，中国股市有个“普京效应”](/articles/cdt/340669.md)
-
-5-16 [维舟｜“中国文化几千年来从未没落过”](/articles/cdt/340671.md)
 
