--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-22 [美国公布规则建议，限制美国人在人工智能等敏感技术领域向中国投资](/articles/voa/1014671.md)
+
 6-22 [陈朗升即将卸任香港记协主席 换届选举前有会员收可疑讯息 不担心选举被渗透](/articles/voa/1014672.md)
 
 6-22 [中国南方强降雨破历史纪录，广东省一市至少有47人在洪涝灾害中死亡](/articles/voa/1014673.md)
@@ -598,6 +600,4 @@
 6-10 [中国籍男子驾快艇私闯台湾本岛，被捕后自称赴台投奔自由](/articles/voa/1014969.md)
 
 6-10 [欧盟本周将宣布对中国电动车征收的进口关税税率](/articles/voa/1014970.md)
-
-6-10 [中国秀巷战机器狗威吓台湾，军事专家:战场实用性待商榷](/articles/voa/1014971.md)
 
