--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-22 [联合国秘书长：黎巴嫩不能“成为另一个加沙”](/articles/voa/1014667.md)
+
+6-22 [格鲁吉亚寻求中国投资，批评者担心背离西方](/articles/voa/1014668.md)
+
 6-22 [以色列军队继续袭击加沙中部和南部](/articles/voa/1014669.md)
 
 6-22 [俄罗斯：愿意与美国进行安全会谈，条件是必须涵盖乌克兰](/articles/voa/1014670.md)
@@ -596,8 +600,4 @@
 6-11 [韩国恢复对朝鲜的高音喇叭广播后，金正恩妹妹金与正威胁对韩国展开新的回击](/articles/voa/1014965.md)
 
 6-10 [瑞士确认有90个国家及组织参加本周的乌克兰和平会议](/articles/voa/1014966.md)
-
-6-10 [布林肯再抵中东为停火斡旋，以军在加沙中部南部持续向前推进](/articles/voa/1014967.md)
-
-6-10 [澳大利亚人担忧中国威胁，专家:中国军事强势犹如豆腐渣工程](/articles/voa/1014968.md)
 
