--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-22 [【404文库】just law｜红星新闻刊发监督报道后，疑有警方“马甲号”对记者“网暴”泼脏水](/articles/cdt/339440.md)
+
 6-22 [每日一语 2024.6.20](/articles/cdt/339451.md)
 
 6-22 [正面连接｜一个外卖员59次丢失了他的尊严](/articles/cdt/339455.md)
@@ -598,6 +600,4 @@
 5-17 [奴隶社会｜《我的阿勒泰》：聊聊剧中的女性主义](/articles/cdt/340660.md)
 
 5-17 [冷杉RECORD｜最后一批“80后”，正在挣扎上岸](/articles/cdt/340662.md)
-
-5-16 [南风窗｜50岁，工地发不了工资](/articles/cdt/340665.md)
 
