--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-22 [极昼工作室｜中专生姜萍消失的日子](/articles/cdt/339430.md)
+
 6-22 [天涯行路｜说说18万公益款，只捐了1.9万的事](/articles/cdt/339434.md)
 
 6-22 [竹不倒｜完了完了，谎言太多记不清，自己打自己了？](/articles/cdt/339437.md)
@@ -598,6 +600,4 @@
 5-17 [【404帖子】EatWithChina｜从我名下所有银行账户被突然冻结看到的荒谬](/articles/cdt/340654.md)
 
 5-17 [每日一语 2024.5.16](/articles/cdt/340656.md)
-
-5-17 [冰川思享号｜年轻人为何不愿缴社保，周小川这回捅破窗户纸了](/articles/cdt/340658.md)
 
