--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-22 [为研究伽马射线暴罕见太空合作 法国与中国联合发射天文卫星](/articles/voa/1014663.md)
+
 6-22 [分析：中国现金再次外流，人民币面临压力](/articles/voa/1014664.md)
 
 6-22 [TikTok提交的法律文件详述了针对潜在美国禁令的论点](/articles/voa/1014665.md)
@@ -598,6 +600,4 @@
 6-11 [美驻日大使说，美国需要日本帮助提高军事生产](/articles/voa/1014961.md)
 
 6-11 [捷克冒激怒中国的风险在台湾开设文化中心](/articles/voa/1014962.md)
-
-6-11 [载有马拉维副总统的飞机失联](/articles/voa/1014963.md)
 
