--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-22 [顶着压力欢迎普京 越南政府意欲何为](/articles/dw/1025138.md)
+
 6-22 [台湾媒体如何抵御中国的宣传战？](/articles/dw/1025139.md)
 
 6-21 [中国发布“惩治台独分子”司法新规 最高可判死刑](/articles/dw/1025140.md)
@@ -598,6 +600,4 @@
 5-27 [瓜达尔港：“一带一路”败相毕露？](/articles/dw/1025436.md)
 
 5-27 [中日韓同意恢復自貿談判 李強批經貿保護主義](/articles/dw/1025437.md)
-
-5-26 [菲律宾大使：和中国没有“君子协定”](/articles/dw/1025438.md)
 
