--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-22 [台湾国防部：41架次中国军机“四面夹台”](/articles/dw/1025137.md)
+
 6-22 [顶着压力欢迎普京 越南政府意欲何为](/articles/dw/1025138.md)
 
 6-22 [台湾媒体如何抵御中国的宣传战？](/articles/dw/1025139.md)
@@ -598,6 +600,4 @@
 5-27 [蓝盔上的污点:维和部队性侵丑闻何时了？](/articles/dw/1025435.md)
 
 5-27 [瓜达尔港：“一带一路”败相毕露？](/articles/dw/1025436.md)
-
-5-27 [中日韓同意恢復自貿談判 李強批經貿保護主義](/articles/dw/1025437.md)
 
