--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,7 +3,11 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-22 [刘晓博｜主要省市，“体制内强度”指数](/articles/cdt/339421.md)
+
 6-22 [每日一语 2024.6.21](/articles/cdt/339424.md)
+
+6-22 [叶克飞｜“体制内强度”指数与“跨体制通婚障碍”](/articles/cdt/339427.md)
 
 6-22 [极昼工作室｜中专生姜萍消失的日子](/articles/cdt/339430.md)
 
@@ -596,8 +600,4 @@
 5-18 [【网络民议】“我是中国歌手，我请战！”](/articles/cdt/340650.md)
 
 5-18 [建设性意见｜揭露“鬼称”的狂飙兄弟是当代侠客，祝福他们赚大钱](/articles/cdt/340651.md)
-
-5-18 [【CDT周报】第170期：一档音综节目咋就成了“五旬老太守国门”？](/articles/cdt/340652.md)
-
-5-17 [【404帖子】EatWithChina｜从我名下所有银行账户被突然冻结看到的荒谬](/articles/cdt/340654.md)
 
