--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-22 [涉“严重违纪违法” 中共中宣部副部长被查](/articles/voa/1014658.md)
+
+6-22 [迟来的国事访问 日本德仁天皇夫妇终启程前往英国](/articles/voa/1014659.md)
+
 6-22 [韩国独立摇滚乐队Say Sue Me中国演唱会突然被取消](/articles/voa/1014660.md)
 
 6-22 [乌克兰：第二次和平峰会将由全球南方国家主办](/articles/voa/1014661.md)
@@ -596,8 +600,4 @@
 6-11 [美国和波兰联手帮助乌克兰打击俄罗斯的虚假信息](/articles/voa/1014956.md)
 
 6-11 [巴基斯坦总理访华的主要看点](/articles/voa/1014957.md)
-
-6-11 [安理会通过美国推出的呼吁加沙停火决议；布林肯再访中东地区](/articles/voa/1014958.md)
-
-6-11 [英法官指辞任香港法院因政治案判决“站不住脚” 加国法官亦宣布不再续任](/articles/voa/1014959.md)
 
