--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-22 [陈惟杉｜普华永道，引火烧身](/articles/cdt/339416.md)
+
+6-22 [【立此存照】惩治“台独”量刑标准公布，最高至死刑](/articles/cdt/339419.md)
+
 6-22 [刘晓博｜主要省市，“体制内强度”指数](/articles/cdt/339421.md)
 
 6-22 [每日一语 2024.6.21](/articles/cdt/339424.md)
@@ -596,8 +600,4 @@
 5-18 [经济观察报｜黑镜律师：“指定居所监视居住”悲剧何时休](/articles/cdt/340640.md)
 
 5-18 [维舟｜人们为何热爱阴谋论](/articles/cdt/340648.md)
-
-5-18 [【网络民议】“我是中国歌手，我请战！”](/articles/cdt/340650.md)
-
-5-18 [建设性意见｜揭露“鬼称”的狂飙兄弟是当代侠客，祝福他们赚大钱](/articles/cdt/340651.md)
 
