--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-22 [推动世界美好｜同样是贫困，美国与中国定义标准差异巨大：谈张维为如何偷梁换柱](/articles/cdt/339402.md)
+
+6-22 [【404文库】北京市档案馆｜近代北京的免费医疗](/articles/cdt/339404.md)
+
 6-22 [陈惟杉｜普华永道，引火烧身](/articles/cdt/339416.md)
 
 6-22 [【立此存照】惩治“台独”量刑标准公布，最高至死刑](/articles/cdt/339419.md)
@@ -596,8 +600,4 @@
 5-18 [【404文库】宾曰语云｜网红书记朱是西被查，惊人的一幕出现了！](/articles/cdt/340631.md)
 
 5-18 [浣花溪杜甫｜比亚迪4S店火灾，网友猜测是不是灭火器自燃引起？](/articles/cdt/340634.md)
-
-5-18 [经济观察报｜黑镜律师：“指定居所监视居住”悲剧何时休](/articles/cdt/340640.md)
-
-5-18 [维舟｜人们为何热爱阴谋论](/articles/cdt/340648.md)
 
