--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-22 [理工科中国留学生入境美国会有问题吗？](/articles/voa/1014656.md)
+
+6-22 [瞄准大疆创新、道通智能 美国会共和党人敦促拜登政府公布中国制无人机国安风险](/articles/voa/1014657.md)
+
 6-22 [涉“严重违纪违法” 中共中宣部副部长被查](/articles/voa/1014658.md)
 
 6-22 [迟来的国事访问 日本德仁天皇夫妇终启程前往英国](/articles/voa/1014659.md)
@@ -596,8 +600,4 @@
 6-11 [又一个TikTok? 美议员担心新闻应用程序NewsBreak的中国背景，呼吁进行严格审查](/articles/voa/1014954.md)
 
 6-11 [新研究显示非洲象以独特的名字彼此呼应](/articles/voa/1014955.md)
-
-6-11 [美国和波兰联手帮助乌克兰打击俄罗斯的虚假信息](/articles/voa/1014956.md)
-
-6-11 [巴基斯坦总理访华的主要看点](/articles/voa/1014957.md)
 
