--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-23 [每日一语 2024.6.22](/articles/cdt/339397.md)
+
 6-22 [澎湃人物｜梅州平远县：38人遇难背后，那些被洪水裹挟的命运](/articles/cdt/339399.md)
 
 6-22 [推动世界美好｜同样是贫困，美国与中国定义标准差异巨大：谈张维为如何偷梁换柱](/articles/cdt/339402.md)
@@ -598,6 +600,4 @@
 5-18 [三联生活周刊｜被迫停滞的春耕：“禁令”下贷款种地的农民们](/articles/cdt/340625.md)
 
 5-18 [兽楼处｜睡在实验室门口的科学家](/articles/cdt/340629.md)
-
-5-18 [【404文库】宾曰语云｜网红书记朱是西被查，惊人的一幕出现了！](/articles/cdt/340631.md)
 
