--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-23 [美国亚太助卿康达对南中国海局势表示“深感关切”](/articles/voa/1014652.md)
+
 6-23 [德国副总理哈贝克：中国力挺俄罗斯是中欧和中德关系恶化关键](/articles/voa/1014653.md)
 
 6-22 [加沙拉法难民营遭到袭击，以军被指造成数十人丧生](/articles/voa/1014654.md)
@@ -598,6 +600,4 @@
 6-11 [解读欧洲议会选举结果](/articles/voa/1014950.md)
 
 6-11 [美参议院扩大对宝马使用被禁中国供应商零件的调查](/articles/voa/1014951.md)
-
-6-11 [美国和菲律宾军队完成在酷热中考验耐力的演习](/articles/voa/1014952.md)
 
