--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-23 [俄罗斯对乌克兰能源设施发动新的导弹攻击](/articles/voa/1014650.md)
+
 6-23 [台湾发现41架中国军机绕岛飞行](/articles/voa/1014651.md)
 
 6-23 [美国亚太助卿康达对南中国海局势表示“深感关切”](/articles/voa/1014652.md)
@@ -598,6 +600,4 @@
 6-11 [外部威胁更加突出 小马科斯称必须为发生不测事件做好准备](/articles/voa/1014948.md)
 
 6-11 [朝鲜士兵上周末短暂越过边境 韩国军方鸣枪示警](/articles/voa/1014949.md)
-
-6-11 [解读欧洲议会选举结果](/articles/voa/1014950.md)
 
