--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-23 [就欧盟额外关税和俄罗斯问题，德国和中国在北京进行艰难的对话](/articles/voa/1014648.md)
+
 6-23 [官员们说，以色列攻击加沙北部打死至少39人](/articles/voa/1014649.md)
 
 6-23 [俄罗斯对乌克兰能源设施发动新的导弹攻击](/articles/voa/1014650.md)
@@ -598,6 +600,4 @@
 6-11 [台湾称驾快艇非法闯入码头的被捕男子为中国前海军艇长](/articles/voa/1014946.md)
 
 6-11 [G7领导人本周齐聚意大利 聚焦讨论对乌克兰的支持](/articles/voa/1014947.md)
-
-6-11 [外部威胁更加突出 小马科斯称必须为发生不测事件做好准备](/articles/voa/1014948.md)
 
