--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -13,6 +13,12 @@
 
 6-22 [【404文库】北京市档案馆｜近代北京的免费医疗](/articles/cdt/339404.md)
 
+6-23 [黑噪音｜朝鲜与俄罗斯结盟：一方遭入侵另一方必军援](/articles/cdt/339409.md)
+
+6-23 [木蹊说｜余秘书长的“外交豁免权”，应该发给姜萍](/articles/cdt/339411.md)
+
+6-23 [木白文笔平平｜从妇女发展基金会的这则善款公告说起](/articles/cdt/339414.md)
+
 6-22 [陈惟杉｜普华永道，引火烧身](/articles/cdt/339416.md)
 
 6-22 [【立此存照】惩治“台独”量刑标准公布，最高至死刑](/articles/cdt/339419.md)
@@ -594,10 +600,4 @@
 5-19 [【重温】维舟｜谣言研究回顾](/articles/cdt/340599.md)
 
 5-18 [每日一语 2024.5.17](/articles/cdt/340611.md)
-
-5-18 [【网络民议】中国“最网盘的导演”，唤醒恍如隔世的疫情记忆](/articles/cdt/340614.md)
-
-5-18 [【404文库】来电娱乐｜“娄烨牛X”!又拍了一部不能上映的电影？娄烨戛纳新片引轰动](/articles/cdt/340622.md)
-
-5-18 [三联生活周刊｜被迫停滞的春耕：“禁令”下贷款种地的农民们](/articles/cdt/340625.md)
 
