--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-23 [梵蒂冈任命中国杭州教区主教 并传达教宗方济各有意访问中国](/articles/voa/1014646.md)
+
+6-23 [台湾“汉光演习”7月登场 取消展示性科目、尽可能模拟实战](/articles/voa/1014647.md)
+
 6-23 [就欧盟额外关税和俄罗斯问题，德国和中国在北京进行艰难的对话](/articles/voa/1014648.md)
 
 6-23 [官员们说，以色列攻击加沙北部打死至少39人](/articles/voa/1014649.md)
@@ -596,8 +600,4 @@
 6-11 [中国总理李强本周将访问新西兰和澳大利亚](/articles/voa/1014944.md)
 
 6-11 [四名美国大学教师在吉林遭刺伤 中国外交部称“偶发事件”](/articles/voa/1014945.md)
-
-6-11 [台湾称驾快艇非法闯入码头的被捕男子为中国前海军艇长](/articles/voa/1014946.md)
-
-6-11 [G7领导人本周齐聚意大利 聚焦讨论对乌克兰的支持](/articles/voa/1014947.md)
 
