--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-23 [也门胡塞武装声称连两天在红海发动袭 美国否认航母遭攻击](/articles/voa/1014644.md)
+
 6-23 [美航母“罗斯福号”抵釜山 参加韩美日“自由之刃”联合军演](/articles/voa/1014645.md)
 
 6-23 [梵蒂冈任命中国杭州教区主教 并传达教宗方济各有意访问中国](/articles/voa/1014646.md)
@@ -598,6 +600,4 @@
 6-11 [四名美国教师吉林遇袭 学者:“一息尚存”的美中民间外交恐“断气”](/articles/voa/1014942.md)
 
 6-11 [中国国企财务造假，分析:若延烧 恐致金融危机](/articles/voa/1014943.md)
-
-6-11 [中国总理李强本周将访问新西兰和澳大利亚](/articles/voa/1014944.md)
 
