--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-23 [马科斯总统：菲律宾不会挑起战争](/articles/dw/1025120.md)
+
 6-23 [欧中同意就电动车关税问题启动磋商](/articles/dw/1025121.md)
 
 6-23 [抵消碳足迹：电动汽车与燃油汽车孰优孰劣？](/articles/dw/1025122.md)
@@ -598,6 +600,4 @@
 5-28 [菲律宾抗议中国单方面年度禁渔令](/articles/dw/1025418.md)
 
 5-28 [美墨邊境的中資企業日子不好過](/articles/dw/1025419.md)
-
-5-28 [降首付、降利率：上海放宽住房限购](/articles/dw/1025420.md)
 
