--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-23 [哈贝克：与中国竞争 欧盟必须更充分准备](/articles/dw/1025118.md)
+
+6-23 [香港反修例運動5週年：出獄少年們為何無悔青春？](/articles/dw/1025119.md)
+
 6-23 [马科斯总统：菲律宾不会挑起战争](/articles/dw/1025120.md)
 
 6-23 [欧中同意就电动车关税问题启动磋商](/articles/dw/1025121.md)
@@ -596,8 +600,4 @@
 5-28 [机器人替你去上学](/articles/dw/1025416.md)
 
 5-28 [中日韓峰會「未來志向」宣言下是否仍貌合神離？](/articles/dw/1025417.md)
-
-5-28 [菲律宾抗议中国单方面年度禁渔令](/articles/dw/1025418.md)
-
-5-28 [美墨邊境的中資企業日子不好過](/articles/dw/1025419.md)
 
