--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-23 [日媒：欧盟寻求与日韩建立防务伙伴关系](/articles/dw/1025116.md)
+
+6-23 [德国基民盟党魁要求严格监管Temu、Shein等](/articles/dw/1025117.md)
+
 6-23 [哈贝克：与中国竞争 欧盟必须更充分准备](/articles/dw/1025118.md)
 
 6-23 [香港反修例運動5週年：出獄少年們為何無悔青春？](/articles/dw/1025119.md)
@@ -596,8 +600,4 @@
 5-29 [客座評論：包裝欠佳的國會擴權激出了抗議](/articles/dw/1025414.md)
 
 5-28 [习近平：促进高校毕业生、农民工就业](/articles/dw/1025415.md)
-
-5-28 [机器人替你去上学](/articles/dw/1025416.md)
-
-5-28 [中日韓峰會「未來志向」宣言下是否仍貌合神離？](/articles/dw/1025417.md)
 
