--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-23 [德国副总理呼吁北京放弃煤炭发电并寻找安全替代](/articles/voa/1014641.md)
+
 6-23 [中菲冲突升级之际 小马科斯：菲律宾无意挑起争端但也不会被吓倒](/articles/voa/1014642.md)
 
 6-23 [俄罗斯议员警告称 莫斯科可能改变动用核武时机](/articles/voa/1014643.md)
@@ -598,6 +600,4 @@
 6-11 [哈马斯称接受安理会支持的加沙停火协议，美认为是“有希望的迹象”](/articles/voa/1014939.md)
 
 6-11 [印外长：印度新政府将聚焦与北京解决边界问题](/articles/voa/1014940.md)
-
-6-11 [越南国家主席呼吁北京妥善处理海洋争端，尊重他国利益](/articles/voa/1014941.md)
 
