--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-23 [内塔尼亚胡再谈美国延误向以提供武器弹药，但希望“在最近的未来”解决分歧](/articles/voa/1014639.md)
+
+6-23 [日漫提台湾主权又“辱华”? 专家:民主国家有创作自由](/articles/voa/1014640.md)
+
 6-23 [德国副总理呼吁北京放弃煤炭发电并寻找安全替代](/articles/voa/1014641.md)
 
 6-23 [中菲冲突升级之际 小马科斯：菲律宾无意挑起争端但也不会被吓倒](/articles/voa/1014642.md)
@@ -596,8 +600,4 @@
 6-12 [泽连斯基：乌克兰需要加强空防和能源系统重建援助](/articles/voa/1014937.md)
 
 6-11 [中国消费低迷 商家狂打价格战，媒体:害人害己](/articles/voa/1014938.md)
-
-6-11 [哈马斯称接受安理会支持的加沙停火协议，美认为是“有希望的迹象”](/articles/voa/1014939.md)
-
-6-11 [印外长：印度新政府将聚焦与北京解决边界问题](/articles/voa/1014940.md)
 
