--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-24 [巴基斯坦批准铲除恐怖主义的新行动 中国压力是重要原因](/articles/voa/1014635.md)
+
 6-24 [厄瓜多尔取消对中国免签，“走线”的大门关上了吗？](/articles/voa/1014636.md)
 
 6-24 [中共更改新疆村名、推销观光 人权团体:旨在抹除维吾尔族文化](/articles/voa/1014637.md)
@@ -598,6 +600,4 @@
 6-12 [维吾尔一周新闻回顾：6月3日-10日](/articles/voa/1014933.md)
 
 6-12 [前中国海军艇长驾快艇抵台“投奔自由”？ 学者:中方恐刻意挑衅台军交战准则](/articles/voa/1014934.md)
-
-6-12 [俄罗斯与白俄罗斯军队开始举行战术核武器第二阶段演习](/articles/voa/1014935.md)
 
