--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-24 [达赖喇嘛抵达美国接受膝盖治疗](/articles/voa/1014634.md)
+
 6-24 [巴基斯坦批准铲除恐怖主义的新行动 中国压力是重要原因](/articles/voa/1014635.md)
 
 6-24 [厄瓜多尔取消对中国免签，“走线”的大门关上了吗？](/articles/voa/1014636.md)
@@ -598,6 +600,4 @@
 6-12 [陪审团裁定亨特·拜登三项涉枪重罪均成立，乔·拜登总统表示接受本案结果并尊重司法程序](/articles/voa/1014932.md)
 
 6-12 [维吾尔一周新闻回顾：6月3日-10日](/articles/voa/1014933.md)
-
-6-12 [前中国海军艇长驾快艇抵台“投奔自由”？ 学者:中方恐刻意挑衅台军交战准则](/articles/voa/1014934.md)
 
