--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-24 [中国欧盟将启动汽车关税磋商，避免贸易争端升级](/articles/nyt/1042651.md)
+
 6-21 [被星链改变的亚马孙部落：“通网”带来的改变和代价](/articles/nyt/1042652.md)
 
 6-21 [美俄中会重启核试验吗](/articles/nyt/1042653.md)
@@ -598,6 +600,4 @@
 3-15 [临终幻象教会我们的事](/articles/nyt/1042949.md)
 
 3-15 [TikTok面临被封杀命运是自食其果](/articles/nyt/1042950.md)
-
-3-15 [关于俄罗斯总统大选投票，你应该知道的](/articles/nyt/1042951.md)
 
