--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-24 [賴清德指「國會改革法案」恐違憲 將聲請釋憲](/articles/dw/1025115.md)
+
 6-23 [日媒：欧盟寻求与日韩建立防务伙伴关系](/articles/dw/1025116.md)
 
 6-23 [德国基民盟党魁要求严格监管Temu、Shein等](/articles/dw/1025117.md)
@@ -598,6 +600,4 @@
 5-29 [「23條」後首案 鄒幸彤等6人疑因「六四」獲罪](/articles/dw/1025413.md)
 
 5-29 [客座評論：包裝欠佳的國會擴權激出了抗議](/articles/dw/1025414.md)
-
-5-28 [习近平：促进高校毕业生、农民工就业](/articles/dw/1025415.md)
 
