--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-24 [中国希望欧盟在7月4日前取消电动汽车关税](/articles/voa/1014629.md)
+
+6-24 [拜登和特朗普本周将举行首场总统大选辩论](/articles/voa/1014630.md)
+
 6-24 [美参联会主席：俄罗斯的朝鲜防御协议可能制造与中国的摩擦](/articles/voa/1014631.md)
 
 6-24 [美国各地温度飙升，中西部同时爆发致命洪水](/articles/voa/1014632.md)
@@ -596,8 +600,4 @@
 6-12 [马拉维总统：副总统坠机遇难；美国政府表示哀悼](/articles/voa/1014927.md)
 
 6-12 [拜登将在G7峰会上推动对付俄罗斯冻结资产和中国产能过剩的计划](/articles/voa/1014928.md)
-
-6-12 [美国对中国发生袭击美国教师事件表示关切](/articles/voa/1014929.md)
-
-6-12 [约旦会谈重点讨论巴勒斯坦人道需求，美国同时推动以哈停火](/articles/voa/1014930.md)
 
