--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-24 [台经济部长率企业代表访美 盼深化双边投资经贸](/articles/voa/1014628.md)
+
 6-24 [中国希望欧盟在7月4日前取消电动汽车关税](/articles/voa/1014629.md)
 
 6-24 [拜登和特朗普本周将举行首场总统大选辩论](/articles/voa/1014630.md)
@@ -598,6 +600,4 @@
 6-12 [伊朗“精心策划”的总统选举将由强硬派候选人主导](/articles/voa/1014926.md)
 
 6-12 [马拉维总统：副总统坠机遇难；美国政府表示哀悼](/articles/voa/1014927.md)
-
-6-12 [拜登将在G7峰会上推动对付俄罗斯冻结资产和中国产能过剩的计划](/articles/voa/1014928.md)
 
