--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-24 [回应中国“惩治台独”新规 台湾总统：民主非罪、中国无权制裁](/articles/voa/1014627.md)
+
 6-24 [台经济部长率企业代表访美 盼深化双边投资经贸](/articles/voa/1014628.md)
 
 6-24 [中国希望欧盟在7月4日前取消电动汽车关税](/articles/voa/1014629.md)
@@ -598,6 +600,4 @@
 6-12 [因违反制裁向中国出售伊朗石油的两名德克萨斯男子被判处45个月监禁](/articles/voa/1014925.md)
 
 6-12 [伊朗“精心策划”的总统选举将由强硬派候选人主导](/articles/voa/1014926.md)
-
-6-12 [马拉维总统：副总统坠机遇难；美国政府表示哀悼](/articles/voa/1014927.md)
 
