--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-24 [追寻我父亲的边疆：他在中共军队的岁月](/articles/nyt/1042649.md)
+
 6-24 [普京来亚洲“搞破坏“，他成功了](/articles/nyt/1042650.md)
 
 6-24 [中国欧盟将启动汽车关税磋商，避免贸易争端升级](/articles/nyt/1042651.md)
@@ -598,6 +600,4 @@
 3-18 [澳大利亚反外国干预法首案：华商因何被定罪？](/articles/nyt/1042947.md)
 
 3-18 [美国TikTok法案为何未在中国引发激烈反弹](/articles/nyt/1042948.md)
-
-3-15 [临终幻象教会我们的事](/articles/nyt/1042949.md)
 
