--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-24 [苍山夜语｜野夫：我的生活非常的诗性，一点没有辜负我的生命](/articles/cdt/339368.md)
+
 6-24 [【404帖子】sven_shi｜关于税务征管当年有过一个有名案例](/articles/cdt/339374.md)
 
 6-24 [正面连接｜脱下长衫，仍是牛马](/articles/cdt/339375.md)
@@ -598,6 +600,4 @@
 5-20 [WOMEN我们｜“COVID-19世代”大学生的漫长季节](/articles/cdt/340551.md)
 
 5-20 [风声OPINION｜房地产政策消解户籍制度，为何一线城市受益最大？](/articles/cdt/340552.md)
-
-5-20 [【CDT报告汇】中国当局如何监控和骚扰海外留学生？（外二篇）](/articles/cdt/340558.md)
 
