--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-24 [习近平在北京与波兰总统杜达会晤 俄乌战争是主要讨论议题](/articles/voa/1014618.md)
+
 6-24 [韩国锂电池厂爆炸失火，二十多工人遇难，多数是中国人](/articles/voa/1014619.md)
 
 6-24 [菲防长：中国使用非法武力故意阻拦菲补给任务，冲突既非误会也非事故](/articles/voa/1014620.md)
@@ -598,6 +600,4 @@
 6-12 [日本据报将制裁向俄罗斯提供援助的第三国企业，包括中国公司在内](/articles/voa/1014916.md)
 
 6-12 [普京访问平壤前 朝鲜领导人金正恩夸耀与俄罗斯的牢固关系](/articles/voa/1014917.md)
-
-6-12 [美国拟扩大制裁向俄罗斯出口芯片的中国第三方卖家](/articles/voa/1014918.md)
 
