--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-25 [每日一语 2024.6.24](/articles/cdt/339358.md)
+
 6-25 [润飞工作室｜一点点被掏空的外汇](/articles/cdt/339360.md)
 
 6-25 [马江博｜GDP能注水，但税收没法撒谎，看完各地数据，我很心惊](/articles/cdt/339362.md)
@@ -598,6 +600,4 @@
 5-20 [木蹊说｜各地频现“鬼秤”，问题的根源究竟在哪？](/articles/cdt/340517.md)
 
 5-20 [冰川思想库｜河南富士康，事情正在起变化](/articles/cdt/340519.md)
-
-5-20 [唐师三百手｜胖猫舆情事件反转，拒绝脏水流量投喂](/articles/cdt/340521.md)
 
