--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-25 [英国向中国出口大批军事设备 武器禁运形同虚设](/articles/voa/1014608.md)
+
+6-25 [国事光析: 特权成灾，社会之癌](/articles/voa/1014609.md)
+
+6-25 [乌克兰向克里米亚发射美国导弹，俄罗斯誓言报复美国](/articles/voa/1014610.md)
+
 6-25 [面对批评声音和资金短缺，联合国巴勒斯坦难民救济处负责人为本机构辩护](/articles/voa/1014611.md)
 
 6-25 [加拿大开始30天磋商，对中国电动汽车征收附加税](/articles/voa/1014612.md)
@@ -594,10 +600,4 @@
 6-13 [美国、卡塔尔和埃及正在评估哈马斯对加沙停火提议的反应](/articles/voa/1014906.md)
 
 6-13 [傲视全球，台湾半导体产值2024年可望突破1540亿美元](/articles/voa/1014907.md)
-
-6-12 [基辅称摧毁俄军三套地对空导弹系统，分析：乌军要到明年才具有反攻能力](/articles/voa/1014908.md)
-
-6-12 [流亡港人指护照被取消震慑效果有限 港官表明属报复英国行为 学者质疑无合理基础](/articles/voa/1014909.md)
-
-6-12 [欧盟加征中国进口电动汽车关税引起国际反响，中欧贸易战难以避免](/articles/voa/1014910.md)
 
