--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+6-25 [韩国锂电池工厂火灾，18名中国劳工遇难](/articles/nyt/1042647.md)
+
+6-25 [致命洪水席卷中国南方，广东至少47人遇难](/articles/nyt/1042648.md)
+
 6-24 [追寻我父亲的边疆：他在中共军队的岁月](/articles/nyt/1042649.md)
 
 6-24 [普京来亚洲“搞破坏“，他成功了](/articles/nyt/1042650.md)
@@ -596,8 +600,4 @@
 3-18 [普京无悬念再获六年任期，进一步巩固统治](/articles/nyt/1042945.md)
 
 3-18 [美国该如何利用朝鲜对中国的戒心和金正恩的野心](/articles/nyt/1042946.md)
-
-3-18 [澳大利亚反外国干预法首案：华商因何被定罪？](/articles/nyt/1042947.md)
-
-3-18 [美国TikTok法案为何未在中国引发激烈反弹](/articles/nyt/1042948.md)
 
