--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-25 [格鲁吉亚试图调和有争议的苏联历史与西方未来](/articles/voa/1014602.md)
+
+6-25 [美国预计将宣布向乌克兰提供1.5亿美元新军援](/articles/voa/1014603.md)
+
 6-25 [美国发表本年度《人口贩运报告》，中国仍被列为第三级国家](/articles/voa/1014604.md)
 
 6-25 [以色列对黎巴嫩的进攻可能扩大战争，并卷入伊朗](/articles/voa/1014605.md)
@@ -596,8 +600,4 @@
 6-13 [美国通胀5月份连续两月减缓；美联储看到进展但预测今年只降息一次](/articles/voa/1014900.md)
 
 6-13 [泽连斯基：俄军空袭他的家乡并造成人员伤亡](/articles/voa/1014901.md)
-
-6-13 [布林肯：哈马斯对停火协议提出了不可行的修改](/articles/voa/1014902.md)
-
-6-13 [关于意大利七国集团峰会 你需要知道的几件事](/articles/voa/1014903.md)
 
