--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-25 [中国异见人士权平首次公开讲述逃亡韩国细节](/articles/nyt/1042646.md)
+
 6-25 [韩国锂电池工厂火灾，18名中国劳工遇难](/articles/nyt/1042647.md)
 
 6-25 [致命洪水席卷中国南方，广东至少47人遇难](/articles/nyt/1042648.md)
@@ -598,6 +600,4 @@
 3-18 [波音要求航司检查787驾驶舱座椅，此前发生急降事故](/articles/nyt/1042944.md)
 
 3-18 [普京无悬念再获六年任期，进一步巩固统治](/articles/nyt/1042945.md)
-
-3-18 [美国该如何利用朝鲜对中国的戒心和金正恩的野心](/articles/nyt/1042946.md)
 
