--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-25 [撞毁巴尔的摩大桥的货轮驶离巴尔的摩前往弗吉尼亚](/articles/voa/1014601.md)
+
 6-25 [格鲁吉亚试图调和有争议的苏联历史与西方未来](/articles/voa/1014602.md)
 
 6-25 [美国预计将宣布向乌克兰提供1.5亿美元新军援](/articles/voa/1014603.md)
@@ -598,6 +600,4 @@
 6-13 [国事光析: 中国社会溃败的国际扩散](/articles/voa/1014899.md)
 
 6-13 [美国通胀5月份连续两月减缓；美联储看到进展但预测今年只降息一次](/articles/voa/1014900.md)
-
-6-13 [泽连斯基：俄军空袭他的家乡并造成人员伤亡](/articles/voa/1014901.md)
 
