--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-25 [美國維基解密案將落幕 阿桑奇認罪換自由](/articles/dw/1025107.md)
+
 6-24 [专访：关税会来的 哈贝克无法解决根本问题](/articles/dw/1025108.md)
 
 6-24 [德国车商：卖不动的电动汽车](/articles/dw/1025109.md)
@@ -598,6 +600,4 @@
 5-29 [欧洲商界领袖：未来三年欧中关系将恶化](/articles/dw/1025405.md)
 
 5-29 [德国入籍人数创2000年以来新高](/articles/dw/1025406.md)
-
-5-29 [加沙当局：以色列空袭拉法造成多人伤亡](/articles/dw/1025407.md)
 
