--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-25 [维基解密创办人阿桑奇与美国司法部达成协议，认罪后将重获自由并返回澳大利亚](/articles/voa/1014600.md)
+
 6-25 [撞毁巴尔的摩大桥的货轮驶离巴尔的摩前往弗吉尼亚](/articles/voa/1014601.md)
 
 6-25 [格鲁吉亚试图调和有争议的苏联历史与西方未来](/articles/voa/1014602.md)
@@ -598,6 +600,4 @@
 6-13 [美国扩大对俄罗斯的制裁，以阻止中国等国家与莫斯科做生意](/articles/voa/1014898.md)
 
 6-13 [国事光析: 中国社会溃败的国际扩散](/articles/voa/1014899.md)
-
-6-13 [美国通胀5月份连续两月减缓；美联储看到进展但预测今年只降息一次](/articles/voa/1014900.md)
 
