--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-25 [筑基政经｜日本母子苏州遇袭与中国经济](/articles/cdt/339351.md)
+
 6-25 [城市地得｜在还有日本人学校的时候，请珍惜它吧](/articles/cdt/339353.md)
 
 6-25 [每日一语 2024.6.23](/articles/cdt/339356.md)
@@ -598,6 +600,4 @@
 5-20 [历史押韵｜连云港海鲜市场上演真实狂飙，高启强在这里都只能夹着尾巴做人](/articles/cdt/340510.md)
 
 5-20 [亮见｜我不关心胖猫事件是不是反转](/articles/cdt/340512.md)
-
-5-20 [北青深一度｜这所幼儿园的孩子，正在被老人代替](/articles/cdt/340515.md)
 
