--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-25 [媒体：中国企业寻求投资马来西亚以规避美国关税](/articles/dw/1025098.md)
+
 6-25 [夏季达沃斯论坛在大连开幕 李强强调多边合作](/articles/dw/1025099.md)
 
 6-25 [研究：美元主导地位稳固 金砖国家去美元化未见进展](/articles/dw/1025100.md)
@@ -598,6 +600,4 @@
 5-31 [董軍、台海、南海：香格里拉對話的三大看點](/articles/dw/1025396.md)
 
 5-30 [欧盟谴责香港法院判14名香港泛民主派人士“颠覆”罪成](/articles/dw/1025397.md)
-
-5-30 [恢复“熊猫外交” 中国将再派两只大熊猫赴美](/articles/dw/1025398.md)
 
