--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-25 [孙韵：中菲6.17海上冲突波云诡谲](/articles/voa/1014593.md)
+
+6-25 [香港泛民47人初选案首批被告进入判刑前减刑答辩](/articles/voa/1014594.md)
+
+6-25 [苏州日侨校车持刀行凶嫌犯已被拘捕，“偶发”频率越来越高](/articles/voa/1014595.md)
+
 6-25 [苏州日侨校车遭袭、日本母子受伤 日驻华使馆提醒公民出行提高警觉](/articles/voa/1014596.md)
 
 6-25 [中国的嫦娥六号月球探测器成功返回地球](/articles/voa/1014597.md)
@@ -594,10 +600,4 @@
 6-13 [李强抵达新西兰展开罕见访问 两边着重两国贸易关系](/articles/voa/1014891.md)
 
 6-13 [中资矿场获贷款引发印尼民众抗议，环境风险担忧升级](/articles/voa/1014892.md)
-
-6-13 [阵容庞大，中俄缺席：三大要点带你看懂乌克兰和平峰会](/articles/voa/1014893.md)
-
-6-13 [东盟争取到2026年达成《南中国海行为准则》，但其法律约束力尚不确定](/articles/voa/1014894.md)
-
-6-13 [联合国人权事务专员：朝鲜人面临毫无希望的生活](/articles/voa/1014895.md)
 
