--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-26 [日籍母子苏州遇袭，中国又称“偶发事件” 分析:官方放任民怨仇外](/articles/voa/1014590.md)
+
 6-25 [哈马斯政治领导人哈尼亚多名亲属在以军空袭中丧生](/articles/voa/1014591.md)
 
 6-25 [金砖国家去美元不遗余力，专业报告：美元的全球地位依然难以撼动](/articles/voa/1014592.md)
@@ -598,6 +600,4 @@
 6-13 [马克龙宣布暂停引发新喀里多尼亚骚乱的选举改革](/articles/voa/1014888.md)
 
 6-13 [李强首访新西兰 示警称“两国间的分歧不应成为鸿沟”](/articles/voa/1014889.md)
-
-6-13 [中国敦促欧盟“重新考虑”加征电动汽车关税决定](/articles/voa/1014890.md)
 
