--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-26 [国际刑事法院对俄罗斯前防长绍伊古和俄军总参谋长格拉西莫夫发出逮捕令](/articles/voa/1014587.md)
+
+6-26 [波兰总统杜达访华 凸显欧洲在中国问题上存在分歧](/articles/voa/1014588.md)
+
+6-26 [美国对中国三大通信巨头展开调查 以防数据落入北京之手](/articles/voa/1014589.md)
+
 6-26 [日籍母子苏州遇袭，中国又称“偶发事件” 分析:官方放任民怨仇外](/articles/voa/1014590.md)
 
 6-25 [哈马斯政治领导人哈尼亚多名亲属在以军空袭中丧生](/articles/voa/1014591.md)
@@ -594,10 +600,4 @@
 6-13 [赖清德接受《时代》周刊采访：北京应正视中华民国的存在，互不隶属是事实陈述](/articles/voa/1014885.md)
 
 6-13 [中国青年失业率居高不下 增加就业出路何在？](/articles/voa/1014886.md)
-
-6-13 [AI武器陆海空齐发 “智能杀人” 限制协议困难重重](/articles/voa/1014887.md)
-
-6-13 [马克龙宣布暂停引发新喀里多尼亚骚乱的选举改革](/articles/voa/1014888.md)
-
-6-13 [李强首访新西兰 示警称“两国间的分歧不应成为鸿沟”](/articles/voa/1014889.md)
 
