--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-26 [非洲人工智能成为美中竞争新领域](/articles/voa/1014585.md)
+
+6-26 [美制裁为伊朗军方转移数十亿美元的“影子银行”网络，包括香港公司](/articles/voa/1014586.md)
+
 6-26 [国际刑事法院对俄罗斯前防长绍伊古和俄军总参谋长格拉西莫夫发出逮捕令](/articles/voa/1014587.md)
 
 6-26 [波兰总统杜达访华 凸显欧洲在中国问题上存在分歧](/articles/voa/1014588.md)
@@ -596,8 +600,4 @@
 6-14 [市场担忧中国报复，欧洲车厂股票周四持续下滑，中国电动车厂商逆势反升](/articles/voa/1014883.md)
 
 6-13 [中国暗示将对欧盟乳制品及猪肉进行反补贴及反倾销调查](/articles/voa/1014884.md)
-
-6-13 [赖清德接受《时代》周刊采访：北京应正视中华民国的存在，互不隶属是事实陈述](/articles/voa/1014885.md)
-
-6-13 [中国青年失业率居高不下 增加就业出路何在？](/articles/voa/1014886.md)
 
