--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-26 [美医务总监将美国枪支暴力宣布为“公共卫生危机”](/articles/voa/1014582.md)
+
+6-26 [美驻华大使：北京使得加强美中民间交流变得“不可能”](/articles/voa/1014583.md)
+
 6-26 [警察和反增税示威者在肯尼亚议会外发生冲突，导致几人死亡](/articles/voa/1014584.md)
 
 6-26 [非洲人工智能成为美中竞争新领域](/articles/voa/1014585.md)
@@ -596,8 +600,4 @@
 6-14 [G7领导人就利用俄被冻结资产利息向乌提供高额贷款达成政治共识](/articles/voa/1014880.md)
 
 6-14 [博明：台湾应建构强大威慑吓阻 拒中国于海峡“护城河”之外](/articles/voa/1014881.md)
-
-6-14 [加沙停火谈判各方努力为达成停火探寻“向前”路径](/articles/voa/1014882.md)
-
-6-14 [市场担忧中国报复，欧洲车厂股票周四持续下滑，中国电动车厂商逆势反升](/articles/voa/1014883.md)
 
