--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,16 @@
 美国之音
 ------
 
+6-26 [2024环太军演即将登场 ,“击沉”演习将瞄准中国两栖攻击舰？](/articles/voa/1014575.md)
+
+6-26 [中国抗议欧盟制裁与俄罗斯战争有关系的公司](/articles/voa/1014576.md)
+
+6-26 [拜登和特朗普本周辩论，分析人士谈两人在关键外交政策问题上的立场](/articles/voa/1014577.md)
+
+6-26 [普京朝鲜之行如何在地区安全问题上损害中国利益?](/articles/voa/1014578.md)
+
+6-26 [肯尼亚总统就首都反增税抗议导致数人死亡发表讲话](/articles/voa/1014579.md)
+
 6-26 [乌克兰开始加入欧盟的谈判](/articles/voa/1014580.md)
 
 6-26 [推特上的中国：美驻华大使罕见严词指责北京，显示双边关系有多么的差](/articles/voa/1014581.md)
@@ -590,14 +600,4 @@
 6-14 [耶伦：中国的贸易政策可能会“严重干扰”与美国双边关系](/articles/voa/1014873.md)
 
 6-14 [泽连斯基：习近平对他承诺中国不会向俄罗斯出售任何武器](/articles/voa/1014874.md)
-
-6-14 [美国在G7峰会宣布将使用被冻结俄资产利息为乌克兰预支500亿美元](/articles/voa/1014875.md)
-
-6-14 [北约秘书长：乌克兰有权利打击俄境内军事目标](/articles/voa/1014876.md)
-
-6-14 [美议员推出法案，要求国家情报总监制定公开报告，披露习近平等中共成员的腐败](/articles/voa/1014877.md)
-
-6-14 [香港采购经理指数再下跌 各行业东主皆叫苦连天](/articles/voa/1014878.md)
-
-6-14 [乌克兰和平峰会前夕，北京抓紧推销自己的和平方案](/articles/voa/1014879.md)
 
