--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-26 [嫦娥六号实现世界首次月球背面采样返回](/articles/nyt/1042643.md)
+
 6-25 [他曾冒死记录光州民主抗争，却隐姓埋名度过半生](/articles/nyt/1042644.md)
 
 6-25 [加沙战争将进入怎样的“新阶段”？](/articles/nyt/1042645.md)
@@ -598,6 +600,4 @@
 3-19 [中国富豪覃辉承认移民欺诈并以他人名义向纽约政客捐款](/articles/nyt/1042941.md)
 
 3-19 [普京胜选后亮相红场，誓言继续乌克兰战争](/articles/nyt/1042942.md)
-
-3-19 [中菲海上冲突频繁，马科斯与西方国家加强外交威慑中国](/articles/nyt/1042943.md)
 
