--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+6-26 [中国企业IPO为何大幅减少](/articles/nyt/1042641.md)
+
+6-26 [中国人买买买造就东南亚“榴莲富豪”](/articles/nyt/1042642.md)
+
 6-26 [嫦娥六号实现世界首次月球背面采样返回](/articles/nyt/1042643.md)
 
 6-25 [他曾冒死记录光州民主抗争，却隐姓埋名度过半生](/articles/nyt/1042644.md)
@@ -596,8 +600,4 @@
 3-19 [特斯拉还是那个不可阻挡的电动汽车霸主吗](/articles/nyt/1042939.md)
 
 3-19 [美联航两周内发生八起事故引发安全忧虑](/articles/nyt/1042940.md)
-
-3-19 [中国富豪覃辉承认移民欺诈并以他人名义向纽约政客捐款](/articles/nyt/1042941.md)
-
-3-19 [普京胜选后亮相红场，誓言继续乌克兰战争](/articles/nyt/1042942.md)
 
