--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-26 [维基解密创始人阿桑奇在塞班岛的法庭上认罪后获释](/articles/voa/1014571.md)
+
+6-26 [韩国军方称朝鲜试射的导弹在空中爆炸](/articles/voa/1014572.md)
+
 6-26 [美国奥运游泳金牌得主告诉国会：已不再信任世界反兴奋剂机构](/articles/voa/1014573.md)
 
 6-26 [韩国：朝鲜似乎进行了一次失败的导弹发射](/articles/voa/1014574.md)
@@ -596,8 +600,4 @@
 6-14 [七国集团瞄准小型中国银行，打击俄罗斯战争经济](/articles/voa/1014869.md)
 
 6-14 [流亡维吾尔记者：前同事们在乌鲁木齐被监禁似乎与其报道工作有关](/articles/voa/1014870.md)
-
-6-14 [USCC听证：中国正在为攻打台湾进行全方位备战](/articles/voa/1014871.md)
-
-6-14 [G7同意拜登提出的用被冻俄资产利息向乌克兰提供500亿美元贷款计划](/articles/voa/1014872.md)
 
