--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-26 [韩国锂电池厂火灾：为何死者多为中国劳工](/articles/nyt/1042640.md)
+
 6-26 [中国企业IPO为何大幅减少](/articles/nyt/1042641.md)
 
 6-26 [中国人买买买造就东南亚“榴莲富豪”](/articles/nyt/1042642.md)
@@ -598,6 +600,4 @@
 3-20 [关于香港“23条”立法，你应该知道的](/articles/nyt/1042938.md)
 
 3-19 [特斯拉还是那个不可阻挡的电动汽车霸主吗](/articles/nyt/1042939.md)
-
-3-19 [美联航两周内发生八起事故引发安全忧虑](/articles/nyt/1042940.md)
 
