--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-26 [維基解密案纏訟14年落幕 阿桑奇認罪換自由](/articles/dw/1025093.md)
+
+6-26 [美國駐華大使批評中國煽動反美情緒](/articles/dw/1025094.md)
+
 6-25 [夏季达沃斯论坛在大连开幕 李强呼吁多边合作](/articles/dw/1025095.md)
 
 6-25 [坎贝尔：普京访朝后 北京在互动中透露出焦虑](/articles/dw/1025096.md)
@@ -596,8 +600,4 @@
 5-31 [拜登默认乌克兰使用美制武器袭击俄军事目标 德国紧跟](/articles/dw/1025391.md)
 
 5-31 [客座评论：美日韩同盟是否会被中国撕开一个口子](/articles/dw/1025392.md)
-
-5-31 [在封口费刑事案中被判有罪 特朗普还能当总统吗？](/articles/dw/1025393.md)
-
-5-31 [马克龙：以欧洲人的姿态行动起来](/articles/dw/1025394.md)
 
