--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-26 [税乎网｜深圳税务局税收违法案例查询链接404了](/articles/cdt/339335.md)
+
 6-26 [木蹊说｜日本籍母子被刺，问题到底出在哪？](/articles/cdt/339337.md)
 
 6-26 [凤凰网｜致命大火背后的中国人：在韩国工厂做最脏累险的活](/articles/cdt/339341.md)
@@ -598,6 +600,4 @@
 5-21 [【翻车现场】35岁的“老年青年人”被优化，60岁的“青年老年人”再就业](/articles/cdt/340491.md)
 
 5-21 [白帝城杜甫｜为何报复社会案频发？](/articles/cdt/340493.md)
-
-5-20 [林中的维吉尔｜伊朗总统死了，这事会有多大影响](/articles/cdt/340498.md)
 
