--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-26 [中国再对台实施“联合战备警巡”北京誓言追捕“台独顽固分子”](/articles/voa/1014566.md)
+
+6-26 [发生重大火灾的韩国电池厂被勒令停工](/articles/voa/1014567.md)
+
 6-26 [十对香港同性伴侣通过视频在美国结婚](/articles/voa/1014568.md)
 
 6-26 [朝鲜“垃圾气球”降落 仁川机场被迫暂时关闭跑道](/articles/voa/1014569.md)
@@ -596,8 +600,4 @@
 6-14 [李强继续访问新西兰 大力宣传与中国做生意的机会](/articles/voa/1014864.md)
 
 6-14 [美国、澳大利亚等西方盟友持续对香港取消流亡海外活动人士的护照表达担忧](/articles/voa/1014865.md)
-
-6-14 [七国集团峰会将注意力转向中国](/articles/voa/1014866.md)
-
-6-14 [加拿大籍中国居民就窃取特斯拉电池技术认罪，同案中国被告仍在逃](/articles/voa/1014867.md)
 
