--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-26 [【告别信】LonelyPlanet｜祝你旅途愉快！](/articles/cdt/339320.md)
+
 6-26 [【网络民议】百年不遇年年遇，偶发事件常常发](/articles/cdt/339325.md)
 
 6-26 [建设性意见｜袭击日本人是偶发，袭击美国人是偶发，欢呼声也是偶发吗？](/articles/cdt/339327.md)
@@ -598,6 +600,4 @@
 5-21 [【网络民议】北京大学名誉教授，—1](/articles/cdt/340480.md)
 
 5-21 [城市的地得｜移民之后](/articles/cdt/340484.md)
-
-5-21 [每日一语 2024.5.20](/articles/cdt/340487.md)
 
