--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-26 [荷兰首相马克·吕特确定出任北约新秘书长 其强烈挺乌抗俄立场引关注](/articles/voa/1014563.md)
+
+6-26 [美大使批北京阻挠双边人文交流，北京称“不符合事实”](/articles/voa/1014564.md)
+
 6-26 [华北雁塘：悲观的中国：中共“二十大三中全会”前夕观察](/articles/voa/1014565.md)
 
 6-26 [中国再对台实施“联合战备警巡”北京誓言追捕“台独顽固分子”](/articles/voa/1014566.md)
@@ -596,8 +600,4 @@
 6-14 [七国集团领导人警告伊朗不要推进其铀浓缩计划及向俄罗斯提供弹道导弹](/articles/voa/1014861.md)
 
 6-14 [美国在台最高外交官孙晓雅离任前警告北京：挑衅可能引发更大的冲突](/articles/voa/1014862.md)
-
-6-14 [中国公民记者黄雪琴因“颠覆罪”被判处五年有期徒刑](/articles/voa/1014863.md)
-
-6-14 [李强继续访问新西兰 大力宣传与中国做生意的机会](/articles/voa/1014864.md)
 
