--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-26 [OpenAI将停止对中国开发者提供服务](/articles/dw/1025083.md)
+
+6-26 [媒体：欧盟“微调”对华电动车关税](/articles/dw/1025084.md)
+
 6-26 [荷兰“不粘锅”将出任新一届北约秘书长](/articles/dw/1025085.md)
 
 6-26 [朝鲜战争爆发74周年之际 半岛危机加剧](/articles/dw/1025086.md)
@@ -596,8 +600,4 @@
 6-1 [欧洲议会大选：怎么选? 选什么?](/articles/dw/1025381.md)
 
 6-1 [被欧盟列为超大平台  Temu须遵守更严格规定](/articles/dw/1025382.md)
-
-6-1 [哈马斯称“积极考虑”拜登宣佈的停火提议](/articles/dw/1025383.md)
-
-6-1 [哈马斯称“积极考虑”以色列提出的停火提议](/articles/dw/1025384.md)
 
