--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-27 [世界媒体看中国 - 电动汽车与贸易形势](/articles/voa/1014556.md)
+
 6-27 [菲律宾驻美大使：第二托马斯浅滩争议可能引发亚洲全面冲突](/articles/voa/1014557.md)
 
 6-27 [蒙古国说唱歌手演唱会在内蒙古被取消](/articles/voa/1014558.md)
@@ -598,6 +600,4 @@
 6-15 [中国拟报复欧盟加征电动车关税 分析: 象征意义大于实质](/articles/voa/1014854.md)
 
 6-15 [大西洋理事会报告：中国向发展中国家大力推介和输出中国专制模式](/articles/voa/1014855.md)
-
-6-15 [普京：要停火先要基辅割地、非核与中立、西方取消制裁，乌克兰：“荒唐”](/articles/voa/1014856.md)
 
