--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-27 [斯里兰卡同中国法国等双边债权国达成债务重组协议](/articles/voa/1014552.md)
+
+6-27 [加拿大反外国干预法对华人有何影响?](/articles/voa/1014553.md)
+
 6-27 [拜登赦免因同性性行为而被美军定罪的退伍军人](/articles/voa/1014554.md)
 
 6-27 [中国富豪新加坡设家办 洗钱风波冲击有限](/articles/voa/1014555.md)
@@ -596,8 +600,4 @@
 6-15 [美国、基辅与北约盟国抨击普京提出的乌克兰停火条件](/articles/voa/1014850.md)
 
 6-15 [强化对北京的批评措辞：G7领导人声明提及中国段落的全文翻译](/articles/voa/1014851.md)
-
-6-15 [七国集团峰会召开之际，欧洲右翼抬头或推动欧盟加快去风险战略](/articles/voa/1014852.md)
-
-6-15 [美国制裁阻拦救援物资进入加沙的以色列团体](/articles/voa/1014853.md)
 
