--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-27 [警方：中国人用豪华轿车偷渡意大利](/articles/voa/1014550.md)
+
+6-27 [中国造北约制式重炮亮相巴黎，引起西方警觉](/articles/voa/1014551.md)
+
 6-27 [斯里兰卡同中国法国等双边债权国达成债务重组协议](/articles/voa/1014552.md)
 
 6-27 [加拿大反外国干预法对华人有何影响?](/articles/voa/1014553.md)
@@ -596,8 +600,4 @@
 6-15 [中国正在向世界输出其政治模式吗？一份新报告给出了肯定的答案](/articles/voa/1014848.md)
 
 6-15 [美众院通过年度国防授权法案，继续投入资源遏阻中国](/articles/voa/1014849.md)
-
-6-15 [美国、基辅与北约盟国抨击普京提出的乌克兰停火条件](/articles/voa/1014850.md)
-
-6-15 [强化对北京的批评措辞：G7领导人声明提及中国段落的全文翻译](/articles/voa/1014851.md)
 
