--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-27 [拜登与特朗普将在亚特兰大进行2024大选年首场总统辩论](/articles/voa/1014548.md)
+
+6-27 [以色列防长：在美国武器运送问题上取得“重大进展”](/articles/voa/1014549.md)
+
 6-27 [警方：中国人用豪华轿车偷渡意大利](/articles/voa/1014550.md)
 
 6-27 [中国造北约制式重炮亮相巴黎，引起西方警觉](/articles/voa/1014551.md)
@@ -596,8 +600,4 @@
 6-15 [黄雪琴王建兵被判刑 观察: 北京借此打压年轻维权人士难奏效](/articles/voa/1014846.md)
 
 6-15 [最高法院推翻特朗普时代对拉斯维加斯枪击案中使用的撞火枪托的禁令](/articles/voa/1014847.md)
-
-6-15 [中国正在向世界输出其政治模式吗？一份新报告给出了肯定的答案](/articles/voa/1014848.md)
-
-6-15 [美众院通过年度国防授权法案，继续投入资源遏阻中国](/articles/voa/1014849.md)
 
