--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-27 [跨国品牌担心过度依赖中国，印度是未来吗？](/articles/nyt/1042636.md)
+
 6-27 [该严惩还是宽恕？未成年人犯罪在中国引发痛苦争论](/articles/nyt/1042637.md)
 
 6-26 [朝圣、音乐节、奥运会，极端酷热下的大型活动有多危险](/articles/nyt/1042638.md)
@@ -598,6 +600,4 @@
 3-20 [悲观蔓延、感觉就像“千刀万剐”：“23条”后香港何去何从](/articles/nyt/1042934.md)
 
 3-20 [布林肯警告中国不要“武装”袭击菲律宾船只](/articles/nyt/1042935.md)
-
-3-20 [中国证监会称恒大财务造假，许家印被终身禁入证券市场](/articles/nyt/1042936.md)
 
