--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-27 [中国5月份工业企业利润增速大幅放缓](/articles/voa/1014541.md)
+
 6-27 [美中延续熊猫保护合作 一对大熊猫即将抵达美国圣地亚哥动物园](/articles/voa/1014542.md)
 
 6-27 [中国针对台湾和日本的海上挑战进一步升级](/articles/voa/1014543.md)
@@ -598,6 +600,4 @@
 6-15 [世界领导人参与乌克兰峰会 中国缺席并称逾百个国家积极回应其替代方案](/articles/voa/1014839.md)
 
 6-15 [中国消费者对新西兰食品业需求增长 李强参观新西兰乳业巨头恒天然](/articles/voa/1014840.md)
-
-6-15 [美国潜艇、加拿大海军巡逻舰紧随俄罗斯军舰抵达古巴](/articles/voa/1014841.md)
 
