--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+6-27 [德中就数据跨境流动设立交流管道](/articles/dw/1025079.md)
+
+6-27 [回應「懲治台獨」措施 台灣調升赴中旅遊警示](/articles/dw/1025080.md)
+
+6-27 [马科斯：除了对北京抗议 菲律宾需要做更多](/articles/dw/1025081.md)
+
 6-27 [足球盛宴 让德国基础设施不堪重负](/articles/dw/1025082.md)
 
 6-26 [OpenAI将停止对中国开发者提供服务](/articles/dw/1025083.md)
@@ -594,10 +600,4 @@
 6-1 [“六四”35周年前夕 港媒头版“开天窗”](/articles/dw/1025377.md)
 
 6-1 [加防长：警告中国勿干涉选举 关切台湾周边军事行动](/articles/dw/1025378.md)
-
-6-1 [德国南部面临百年一遇的洪水威胁](/articles/dw/1025379.md)
-
-6-1 [美防长：与中国的战争既非迫在眉睫亦非不可避免](/articles/dw/1025380.md)
-
-6-1 [欧洲议会大选：怎么选? 选什么?](/articles/dw/1025381.md)
 
