--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-27 [法国议会选举前夕欧盟将就主要领导职位人选达成协议](/articles/voa/1014537.md)
+
+6-27 [中共二十届三中全会定于7月15日至18日召开](/articles/voa/1014538.md)
+
 6-27 [朝鲜声称成功试射多弹头导弹 韩国称其为“谎言”](/articles/voa/1014539.md)
 
 6-27 [小马科斯：菲律宾需要“做更多”而不只是抗议中国在南中国海的行动](/articles/voa/1014540.md)
@@ -596,8 +600,4 @@
 6-15 [专访前白宫副国安顾问博明：习近平正在备战 中国人民是我们最好的盟友](/articles/voa/1014835.md)
 
 6-15 [中国“80后”，退休还有养老金吗？](/articles/voa/1014836.md)
-
-6-15 [黄埔建军百年 中共如何透过改造国军墓碑重构历史？](/articles/voa/1014837.md)
-
-6-15 [中国海警争议新规生效 G7指责北京恐吓胁迫活动](/articles/voa/1014838.md)
 
