--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-27 [朝鲜称成功试射多弹头导弹 韩国：夸大其词](/articles/dw/1025074.md)
+
 6-27 [中国称欢迎各国科学家研究月球样本](/articles/dw/1025075.md)
 
 6-27 [电动车关税争端：德国总理建议欧中征收同等关税](/articles/dw/1025076.md)
@@ -598,6 +600,4 @@
 6-2 [在战火中学习 - 哈尔科夫地下六米深处的课堂](/articles/dw/1025372.md)
 
 6-2 [对抗孤独！德政府发布“孤独晴雨表”](/articles/dw/1025373.md)
-
-6-2 [《关键原材料法案》生效 欧洲能否保障原料供给安全？](/articles/dw/1025374.md)
 
