--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-27 [美众议员：欲不开一枪制服美国，中共之手广渗美联邦政府、军情和外交界](/articles/voa/1014532.md)
+
+6-27 [英国人权组织采取法律行动 力阻中国电商巨头希音在伦敦上市](/articles/voa/1014533.md)
+
+6-27 [以色列称能将黎巴嫩“打回石器时代”，但不愿与贝鲁特开战](/articles/voa/1014534.md)
+
 6-27 [中共两任国防部长同一天被开除党籍军籍，习近平控制军队绝不手软](/articles/voa/1014535.md)
 
 6-27 [反制北京公布惩治“台独”意见，台湾提升赴大陆旅游警示](/articles/voa/1014536.md)
@@ -594,10 +600,4 @@
 6-16 [欧盟挥关税重拳，中国电动车三巨头应战：比亚迪为何沉默？](/articles/voa/1014830.md)
 
 6-15 [以军在加沙战场使用人工智能技术惹争议，专家称或有利减少平民伤亡](/articles/voa/1014831.md)
-
-6-15 [李强访澳呼吁搁置分歧 专家:以维护澳国家利益为原则](/articles/voa/1014832.md)
-
-6-15 [分析：G7公报反映对中国的共同关切，是措辞和行动上的重大升级，但不会使中国改变做法](/articles/voa/1014833.md)
-
-6-15 [菲律宾向联合国递交申请，要求将其南中国海大陆架延申至350海里](/articles/voa/1014834.md)
 
