--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-28 [美驻华大使再度发声，批北京不懂美欧核心价值，误判中欧关系](/articles/voa/1014530.md)
+
+6-28 [台湾调升中港澳旅游警示 分析: 合理应对中国威胁](/articles/voa/1014531.md)
+
 6-27 [美众议员：欲不开一枪制服美国，中共之手广渗美联邦政府、军情和外交界](/articles/voa/1014532.md)
 
 6-27 [英国人权组织采取法律行动 力阻中国电商巨头希音在伦敦上市](/articles/voa/1014533.md)
@@ -596,8 +600,4 @@
 6-16 [紧张关系不断升级—中国20多年对菲投资未奏效 北京“以商逼政”或适得其反](/articles/voa/1014828.md)
 
 6-16 [各国领导人现身乌克兰国际峰会，哈里斯副总统宣布向基辅提供15亿美元新援助](/articles/voa/1014829.md)
-
-6-16 [欧盟挥关税重拳，中国电动车三巨头应战：比亚迪为何沉默？](/articles/voa/1014830.md)
-
-6-15 [以军在加沙战场使用人工智能技术惹争议，专家称或有利减少平民伤亡](/articles/voa/1014831.md)
 
