--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-28 [“失去的十年”：专家解读华盛顿为何未能充分回应中国崛起](/articles/voa/1014522.md)
+
+6-28 [外国对华投资连续十二个月下跌，中国创业者叹融资难](/articles/voa/1014523.md)
+
+6-28 [也门胡塞武装使用无人驾驶船只在红海发动袭击](/articles/voa/1014524.md)
+
 6-28 [拜登和特朗普大选今晚首辩，中国议题怎么谈？](/articles/voa/1014525.md)
 
 6-28 [中国海上挑衅被视为对美菲联盟的考验](/articles/voa/1014526.md)
@@ -594,10 +600,4 @@
 6-16 [法国新一届议会选举前 大规模游行反对极右翼](/articles/voa/1014820.md)
 
 6-16 [李强访澳表示将延续熊猫外交 并访问葡萄酒产区象征澳中贸易关系好转](/articles/voa/1014821.md)
-
-6-16 [2024首场美国总统辩论将登场 拜登、特朗普团队同意麦克风静音规则](/articles/voa/1014822.md)
-
-6-16 [一个月球，两个阵营，美中地缘政治竞争延伸到月球](/articles/voa/1014823.md)
-
-6-16 [中国总理李强抵达澳大利亚，表示关系“重回正轨”](/articles/voa/1014824.md)
 
