--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-28 [俄朝关系趋于密切或为美中两国创造机会](/articles/voa/1014521.md)
+
 6-28 [“失去的十年”：专家解读华盛顿为何未能充分回应中国崛起](/articles/voa/1014522.md)
 
 6-28 [外国对华投资连续十二个月下跌，中国创业者叹融资难](/articles/voa/1014523.md)
@@ -598,6 +600,4 @@
 6-16 [台湾总统军校演说称 中国视“并吞与消灭台湾”为民族事业](/articles/voa/1014819.md)
 
 6-16 [法国新一届议会选举前 大规模游行反对极右翼](/articles/voa/1014820.md)
-
-6-16 [李强访澳表示将延续熊猫外交 并访问葡萄酒产区象征澳中贸易关系好转](/articles/voa/1014821.md)
 
