--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-28 [中国两任国防部长被开除军籍党籍](/articles/nyt/1042633.md)
+
 6-27 [中国网络信息战新策略：异见作家邓聿文之女遭网暴](/articles/nyt/1042634.md)
 
 6-27 [口误、金句、互相侮辱：美国总统大选辩论的经典时刻](/articles/nyt/1042635.md)
@@ -598,6 +600,4 @@
 3-21 [“23条”立法后，香港还能保住亚洲金融中心地位吗](/articles/nyt/1042931.md)
 
 3-21 [赵安吉死亡事件调查：警方称其驾车坠水时处于醉酒状态](/articles/nyt/1042932.md)
-
-3-21 [通过“高才通”计划涌入香港的中国内地人为何而来](/articles/nyt/1042933.md)
 
