--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-28 [台湾调高前往中国大陆旅游警告级别](/articles/nyt/1042632.md)
+
 6-28 [中国两任国防部长被开除军籍党籍](/articles/nyt/1042633.md)
 
 6-27 [中国网络信息战新策略：异见作家邓聿文之女遭网暴](/articles/nyt/1042634.md)
@@ -598,6 +600,4 @@
 3-21 [盘点香港知名民主活动人士现况](/articles/nyt/1042930.md)
 
 3-21 [“23条”立法后，香港还能保住亚洲金融中心地位吗](/articles/nyt/1042931.md)
-
-3-21 [赵安吉死亡事件调查：警方称其驾车坠水时处于醉酒状态](/articles/nyt/1042932.md)
 
