--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-28 [美亚太助卿康达担忧中国“惩治台独”新规将引发寒蝉效应](/articles/voa/1014518.md)
+
+6-28 [拜登与特朗普的首场辩论主要辩论了什么？](/articles/voa/1014519.md)
+
 6-28 [路易斯安那州法律引发关于公立学校展示“十诫”的争论](/articles/voa/1014520.md)
 
 6-28 [俄朝关系趋于密切或为美中两国创造机会](/articles/voa/1014521.md)
@@ -596,8 +600,4 @@
 6-16 [中共“隔离”台湾难达统一目标 分析：堪称“鸡肋”](/articles/voa/1014816.md)
 
 6-16 [以色列宣布日间“战术性暂停军事活动” 以国防长将访问五角大楼](/articles/voa/1014817.md)
-
-6-16 [隐瞒参与中国“千人计划”并遭定罪的美国科学家可能将获港大聘任](/articles/voa/1014818.md)
-
-6-16 [台湾总统军校演说称 中国视“并吞与消灭台湾”为民族事业](/articles/voa/1014819.md)
 
