--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-28 [欧盟通过新领导层人选 冯德莱恩再获欧盟委员会主席提名](/articles/voa/1014516.md)
+
 6-28 [拜登与特朗普的首场电视辩论在美国社媒上引起担忧与失望](/articles/voa/1014517.md)
 
 6-28 [美亚太助卿康达担忧中国“惩治台独”新规将引发寒蝉效应](/articles/voa/1014518.md)
@@ -598,6 +600,4 @@
 6-16 [“七一”临近，洛杉矶民主人士举办“中共百年暴行展” 助海外人士认清中共本质](/articles/voa/1014814.md)
 
 6-16 [阿迪达斯中国分公司高管被举报受贿，德国总公司对此正式展开调查](/articles/voa/1014815.md)
-
-6-16 [中共“隔离”台湾难达统一目标 分析：堪称“鸡肋”](/articles/voa/1014816.md)
 
