--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-28 [勇救日本母子的苏州女子伤重身亡](/articles/voa/1014515.md)
+
 6-28 [欧盟通过新领导层人选 冯德莱恩再获欧盟委员会主席提名](/articles/voa/1014516.md)
 
 6-28 [拜登与特朗普的首场电视辩论在美国社媒上引起担忧与失望](/articles/voa/1014517.md)
@@ -598,6 +600,4 @@
 6-16 [乌克兰和平峰会发表公报，80个国家签字支持乌克兰“领土完整”](/articles/voa/1014813.md)
 
 6-16 [“七一”临近，洛杉矶民主人士举办“中共百年暴行展” 助海外人士认清中共本质](/articles/voa/1014814.md)
-
-6-16 [阿迪达斯中国分公司高管被举报受贿，德国总公司对此正式展开调查](/articles/voa/1014815.md)
 
