--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-28 [印尼将驱逐在巴厘岛涉嫌网络诈骗的台湾人](/articles/voa/1014511.md)
+
+6-28 [日本和菲律宾将在马尼拉举行外交国防“2+2”会谈](/articles/voa/1014512.md)
+
 6-28 [习近平发表讲话呼吁在贸易和外交摩擦中架设“桥梁”](/articles/voa/1014513.md)
 
 6-28 [坎贝尔与马朝旭通话：就中国在南中国海的行为表示严重关切](/articles/voa/1014514.md)
@@ -596,8 +600,4 @@
 6-17 [乌克兰和平峰会虽然有了张凝聚和平力量的“全家福”，但实际成效有限？](/articles/voa/1014809.md)
 
 6-17 [中国南方暴雨连连，北方热浪滚滚降雨稀少](/articles/voa/1014810.md)
-
-6-17 [杨恒均的支持者说，在中国总理访澳前,北京法院维持对杨的原判](/articles/voa/1014811.md)
-
-6-17 [美国国会两党议员下周访问印度，并将会晤西藏流亡精神领袖达赖喇嘛](/articles/voa/1014812.md)
 
