--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-28 [2024欧洲杯：年轻主帅给德国队带来新希望](/articles/dw/1025068.md)
+
+6-28 [苏州“6·24”日本人遇袭事件：胡友平见义勇为伤重离世](/articles/dw/1025069.md)
+
 6-28 [美国大选首场辩论会对拜登而言堪称“灾难”](/articles/dw/1025070.md)
 
 6-28 [日菲或签署安全协议 允许军队互入对方领土](/articles/dw/1025071.md)
@@ -596,8 +600,4 @@
 6-3 [從英美到台灣 海外如何不忘「六四」？](/articles/dw/1025366.md)
 
 6-3 [高尔夫50年的成功历史](/articles/dw/1025367.md)
-
-6-2 [新加坡香會落幕 專家：中國對他國關切充耳不聞](/articles/dw/1025368.md)
-
-6-2 [中国防长猛烈抨击台独 台湾回应](/articles/dw/1025369.md)
 
