--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-28 [分析：美国大选首场辩论会对拜登而言堪称“灾难”](/articles/dw/1025067.md)
+
 6-28 [2024欧洲杯：年轻主帅给德国队带来新希望](/articles/dw/1025068.md)
 
 6-28 [苏州“6·24”日本人遇袭事件：胡友平见义勇为伤重离世](/articles/dw/1025069.md)
@@ -598,6 +600,4 @@
 6-3 [八年改變了什麼？台灣年輕人怎麼看蔡英文？](/articles/dw/1025365.md)
 
 6-3 [從英美到台灣 海外如何不忘「六四」？](/articles/dw/1025366.md)
-
-6-3 [高尔夫50年的成功历史](/articles/dw/1025367.md)
 
