--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-28 [SpaceX将建太空船送国际空间站最后一程](/articles/dw/1025065.md)
+
+6-28 [这些年 岁月如何蚀刻了阿桑奇的容颜?](/articles/dw/1025066.md)
+
 6-28 [分析：美国大选首场辩论会对拜登而言堪称“灾难”](/articles/dw/1025067.md)
 
 6-28 [2024欧洲杯：年轻主帅给德国队带来新希望](/articles/dw/1025068.md)
@@ -596,8 +600,4 @@
 6-3 [长平观察：论中文互联网的倒掉](/articles/dw/1025363.md)
 
 6-3 [新加坡香會：日本重新完善印太地區戰略、中日各抒己見](/articles/dw/1025364.md)
-
-6-3 [八年改變了什麼？台灣年輕人怎麼看蔡英文？](/articles/dw/1025365.md)
-
-6-3 [從英美到台灣 海外如何不忘「六四」？](/articles/dw/1025366.md)
 
