--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-28 [拜登与特朗普在涉华关税上争功 中国官媒网民热议](/articles/voa/1014505.md)
+
+6-28 [喊“中国经济不能下猛药” 李强言论为何遭下架？](/articles/voa/1014506.md)
+
 6-28 [韩国发布视频驳斥朝鲜导弹试射成功的说法](/articles/voa/1014507.md)
 
 6-28 [基辅推动北约在乌西部设立禁飞区保护能源基础设施](/articles/voa/1014508.md)
@@ -596,8 +600,4 @@
 6-17 [中国海警称菲律宾补给船在南中国海争议海域与中国船只相撞](/articles/voa/1014803.md)
 
 6-17 [澳中总理举行会谈 强调稳定双边关系并将扩大合作](/articles/voa/1014804.md)
-
-6-17 [当局推出救市举措 中国房市仍跌个不停](/articles/voa/1014805.md)
-
-6-17 [易富贤：再论中国制造业即将衰落](/articles/voa/1014806.md)
 
