--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-29 [一对大熊猫安全抵达加州圣地亚哥动物园](/articles/voa/1014501.md)
+
 6-29 [香港七一大游行被禁 港人诉求无门心灰意冷](/articles/voa/1014502.md)
 
 6-29 [普京赠与金正恩的豪华轿车内置多种韩国零件](/articles/voa/1014503.md)
@@ -598,6 +600,4 @@
 6-17 [聿文视界：高考并未减缓中国社会不平等的加剧](/articles/voa/1014799.md)
 
 6-17 [报告：随着全球紧张局势加剧 核武器国家相关项目支出上升](/articles/voa/1014800.md)
-
-6-17 [普京预计将访越南 美国批评“不该为他提供战争宣传平台”](/articles/voa/1014801.md)
 
