--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-29 [斯洛文尼亚总统访问基辅；俄军就美国无人机在黑海飞行发出警告](/articles/voa/1014499.md)
+
+6-29 [孟加拉总理即将访华 平衡中印外交](/articles/voa/1014500.md)
+
 6-29 [一对大熊猫安全抵达加州圣地亚哥动物园](/articles/voa/1014501.md)
 
 6-29 [香港七一大游行被禁 港人诉求无门心灰意冷](/articles/voa/1014502.md)
@@ -596,8 +600,4 @@
 6-17 [世界先进赴新加坡建晶圆厂，全球芯片供应链积极“去中化”](/articles/voa/1014797.md)
 
 6-17 [“五眼联盟”警告: 中共空军缺实战经验，网罗西方飞行员窃战术](/articles/voa/1014798.md)
-
-6-17 [聿文视界：高考并未减缓中国社会不平等的加剧](/articles/voa/1014799.md)
-
-6-17 [报告：随着全球紧张局势加剧 核武器国家相关项目支出上升](/articles/voa/1014800.md)
 
