--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-29 [世界最大规模海军演习开始，向中国发出信息](/articles/voa/1014494.md)
+
 6-29 [美国大选将如何影响西方对乌克兰的援助？](/articles/voa/1014495.md)
 
 6-29 [中国对澳大利亚单方面免签后 澳大利亚维持对中国的旅行警告](/articles/voa/1014496.md)
@@ -598,6 +600,4 @@
 6-17 [华北雁塘: 缺席的代价：瑞士和平峰会后的中国问题](/articles/voa/1014792.md)
 
 6-17 [中国五月份工业产出增长低于预期 房地产业持续危机拖累经济](/articles/voa/1014793.md)
-
-6-17 [美日加菲海军在南中国海举行联合演习，履行对地区安全与稳定的承诺](/articles/voa/1014794.md)
 
