--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-29 [路透独家：美国自加沙战争爆发以来已向以色列运送数千枚2000磅炸弹](/articles/voa/1014485.md)
+
 6-29 [中国与秘鲁双边自贸协定将升级](/articles/voa/1014486.md)
 
 6-29 [死刑威胁笼罩下 中国称台湾人来旅游可“乘兴”](/articles/voa/1014487.md)
@@ -598,6 +600,4 @@
 6-18 [推特上的中国：“审查实况直播中” 中国官员活动现场阻挡澳籍记者成蕾遭抨击](/articles/voa/1014783.md)
 
 6-18 [美国宇航局太空项目将发射人造星球进入太空](/articles/voa/1014784.md)
-
-6-18 [美国国务院谴责中国将两名活动人士判刑](/articles/voa/1014785.md)
 
