--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-29 [意大利强化与日本军事合作 派遣航母将参加联合军演](/articles/dw/1025058.md)
+
 6-29 [美谴责朝鲜向俄提供武器 俄罗斯或恢复生产中短程导弹](/articles/dw/1025059.md)
 
 6-29 [德交通部长访华挨总理批评 勉力自辩](/articles/dw/1025060.md)
@@ -598,6 +600,4 @@
 6-3 [客座评论：谁是中国在欧洲的特洛伊木马？](/articles/dw/1025356.md)
 
 6-3 [墨西哥选出首位女总统](/articles/dw/1025357.md)
-
-6-3 [黄仁勋称台湾“重要国家”  网民：就当没听到](/articles/dw/1025358.md)
 
