--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-29 [伊朗总统选举:改革派与强硬派候选人进入“决赛圈”](/articles/dw/1025056.md)
+
+6-29 [阿桑奇，重获自由](/articles/dw/1025057.md)
+
 6-29 [意大利强化与日本军事合作 派遣航母将参加联合军演](/articles/dw/1025058.md)
 
 6-29 [美谴责朝鲜向俄提供武器 俄罗斯或恢复生产中短程导弹](/articles/dw/1025059.md)
@@ -596,8 +600,4 @@
 6-3 [六四前夕 港警共逮捕八名社媒发帖民众](/articles/dw/1025354.md)
 
 6-3 [北京背书阿联酋岛屿诉求 再引德黑兰不满](/articles/dw/1025355.md)
-
-6-3 [客座评论：谁是中国在欧洲的特洛伊木马？](/articles/dw/1025356.md)
-
-6-3 [墨西哥选出首位女总统](/articles/dw/1025357.md)
 
