--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-29 [世界媒体看中国 - 两个前防长一道被开除](/articles/voa/1014481.md)
+
+6-29 [华为卷土重来？分析人士：中共不会让华为死掉](/articles/voa/1014482.md)
+
 6-29 [普京：俄罗斯可能恢复中程导弹的全球部署](/articles/voa/1014483.md)
 
 6-29 [人权组织:肯尼亚反政府抗议导致至少30人死亡](/articles/voa/1014484.md)
@@ -596,8 +600,4 @@
 6-18 [反修例运动5周年 社运案受审学生指监狱不会是终结 出狱女子续支援同路人](/articles/voa/1014779.md)
 
 6-18 [针对媒体的威胁日趋严重，美国多州举办新闻安全研讨会](/articles/voa/1014780.md)
-
-6-18 [南中国海最新撞船事件后，美国发表声明支持菲律宾，谴责中国“升级和不负责任的行动”](/articles/voa/1014781.md)
-
-6-18 [北约秘书长警告习近平：若继续在俄乌战争中支持普京将会付出代价](/articles/voa/1014782.md)
 
