--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-30 [加沙停火谈判无进展，加沙城爆发战斗](/articles/voa/1014472.md)
+
 6-30 [官员们说，俄罗斯导弹攻击乌克兰城镇打死七人](/articles/voa/1014473.md)
 
 6-30 [秘鲁过渡总统争议声中访华 北京强化地缘政治影响力](/articles/voa/1014474.md)
@@ -598,6 +600,4 @@
 6-18 [北约秘书长:逾20盟国今年实现国防开支目标](/articles/voa/1014770.md)
 
 6-18 [普京赞扬朝鲜“坚定支持”莫斯科在乌克兰的“特别军事行动”](/articles/voa/1014771.md)
-
-6-18 [英国大选在即：BNO港人影响力显现，候选人纷纷表态支持](/articles/voa/1014772.md)
 
