--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -11,6 +11,8 @@
 
 6-30 [城市的地得｜“家属和记者取得联系”：记者的退场意味深长](/articles/cdt/339251.md)
 
+6-30 [【404文库】“相比于袭击本身，社会对袭击的看法更让人担忧”（外二篇）](/articles/cdt/339255.md)
+
 6-30 [【404文库】夏星繁｜洒泪祭雄杰：痛悼江苏苏州见义勇为的英雄胡友平女士](/articles/cdt/339267.md)
 
 6-29 [【404文库】i看见｜日本人学校，间谍学校？](/articles/cdt/339271.md)
@@ -598,6 +600,4 @@
 5-23 [中新经纬｜“我是你妈”不能发，小天才回应！](/articles/cdt/340417.md)
 
 5-23 [西坡原创｜“这个社会为啥这么压抑？”](/articles/cdt/340420.md)
-
-5-23 [往事与随想｜中文互联网崩塌，平台应当提供备份下载](/articles/cdt/340423.md)
 
