--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,16 @@
 德国之声
 ------
 
+6-30 [中国颁布条例加强对稀土资源的管控](/articles/dw/1025050.md)
+
+6-30 [“让欧洲再次伟大”:匈牙利将接任欧盟轮值主席国](/articles/dw/1025051.md)
+
+6-30 [外国人发帖美化恐怖主义将更容易被德国驱逐](/articles/dw/1025052.md)
+
+6-30 [希腊引入一周六天工作制](/articles/dw/1025053.md)
+
+6-30 [解码中国：北京如何将伊斯兰教“中国化”](/articles/dw/1025054.md)
+
 6-29 [AfD疏美亲中？ 德经济学家敲警钟](/articles/dw/1025055.md)
 
 6-29 [伊朗总统选举:改革派与强硬派候选人进入“决赛圈”](/articles/dw/1025056.md)
@@ -590,14 +600,4 @@
 6-4 [香港嚴防六四集會 行動藝術家沉默悼念遭捕](/articles/dw/1025348.md)
 
 6-4 [專訪蕭強：六四歷史「無論如何也抹不掉」](/articles/dw/1025349.md)
-
-6-4 [鲍家父子的六四记忆](/articles/dw/1025350.md)
-
-6-4 [德国基本法，生日快乐！](/articles/dw/1025351.md)
-
-6-4 [专访林培瑞：八九六四和“向前看”](/articles/dw/1025352.md)
-
-6-3 [日本靖国神社遭涂鸦](/articles/dw/1025353.md)
-
-6-3 [六四前夕 港警共逮捕八名社媒发帖民众](/articles/dw/1025354.md)
 
