--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-30 [中国6月份制造业活动连续第二个月萎缩](/articles/voa/1014468.md)
+
 6-30 [朝鲜批评美日韩联合军演为“亚洲版北约” 警告将招来“致命性后果](/articles/voa/1014469.md)
 
 6-30 [法国举行首轮议会选举 极右翼势力可能入主政府](/articles/voa/1014470.md)
@@ -598,6 +600,4 @@
 6-18 [网传中国核潜艇现踪台海，台湾国防部称“有掌握”](/articles/voa/1014766.md)
 
 6-18 [泰国前总理他信涉嫌冒犯君主遭正式起诉但获准保释](/articles/voa/1014767.md)
-
-6-18 [韩朝非军事区地雷爆炸，朝鲜士兵两周内二度越过分界线](/articles/voa/1014768.md)
 
