--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -17,6 +17,8 @@
 
 6-29 [【404文库】i看见｜日本人学校，间谍学校？](/articles/cdt/339271.md)
 
+6-30 [【CDT周报】第176期：一个大写的人，一道照亮世人心灵的光](/articles/cdt/339279.md)
+
 6-29 [每日一语 2024.6.29](/articles/cdt/339284.md)
 
 6-29 [往事与随想｜以真实的人抵抗虚妄的仇恨](/articles/cdt/339287.md)
@@ -598,6 +600,4 @@
 5-23 [安安侃车｜港珠澳大桥激起众怒？不少司机上了桥就被劝退](/articles/cdt/340414.md)
 
 5-23 [中新经纬｜“我是你妈”不能发，小天才回应！](/articles/cdt/340417.md)
-
-5-23 [西坡原创｜“这个社会为啥这么压抑？”](/articles/cdt/340420.md)
 
