--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -215,6 +215,8 @@
 
 6-16 [天涯行路｜不得了，美国又爆了一根水管](/articles/cdt/339600.md)
 
+7-1 [【中国哭墙】有人为屠戮妇孺叫好，有人以血肉之躯挡利刃尖刀（6月1日-6月30日，2024年）](/articles/cdt/339606.md)
+
 6-16 [【404空间】ROXIE｜ROXIE’s GOODBYE](/articles/cdt/339608.md)
 
 6-16 [建设性意见｜港澳通行证为什么还没取消？](/articles/cdt/339610.md)
@@ -598,6 +600,4 @@
 5-24 [建设性意见｜台湾艺人，有没有保持沉默的权利？](/articles/cdt/340400.md)
 
 5-23 [【404文库】“我们这个时代，每个人都是影像创作者，守护好自己的影像，守护好自己这三年的记忆”（外二篇）](/articles/cdt/340408.md)
-
-5-23 [安安侃车｜港珠澳大桥激起众怒？不少司机上了桥就被劝退](/articles/cdt/340414.md)
 
