--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-1 [极端正统犹太人在耶路撒冷抗议以军征召，引发暴力](/articles/voa/1014455.md)
+
 7-1 [香港监察呼吁英国政府再次扩大BN(O)签证 让部分1997前出生人士有资格申请](/articles/voa/1014456.md)
 
 7-1 [俄罗斯攻击哈尔科夫，打死一人，打伤八人](/articles/voa/1014457.md)
@@ -598,6 +600,4 @@
 6-19 [拜登为美国公民的无证配偶开辟了获得公民身份的途径](/articles/voa/1014753.md)
 
 6-19 [“走线”非法移民激增 厄瓜多尔暂停对中国公民免签](/articles/voa/1014754.md)
-
-6-19 [美国呼吁“紧急”缓解以色列和真主党的冲突](/articles/voa/1014755.md)
 
