--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-1 [中国制造业活动增速创三年来新高](/articles/voa/1014451.md)
+
+7-1 [香港主权移交中国27周年 北京欲赠大熊猫以提振香港形象](/articles/voa/1014452.md)
+
 7-1 [美最高法院将裁决特朗普豁免权案](/articles/voa/1014453.md)
 
 7-1 [美日韩军演后朝鲜发射两枚导弹 其中一枚疑似试射失败或落入内陆](/articles/voa/1014454.md)
@@ -596,8 +600,4 @@
 6-19 [针对欧盟电动车关税 中国选择报复欧洲农民而非汽车制造商](/articles/voa/1014749.md)
 
 6-19 [“大外宣”从中央走向地方 专家：中国的问题并不在呈现方式](/articles/voa/1014750.md)
-
-6-19 [布林肯：中国对俄罗斯国防工业基础的支持“必须停止”](/articles/voa/1014751.md)
-
-6-19 [尽管进口下降，但中国提高了在德国电动汽车市场的份额](/articles/voa/1014752.md)
 
