--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-1 [真实故事计划｜年轻人离开天通苑](/articles/cdt/339218.md)
+
 7-1 [小小声说话｜为什么中国媒体对华北暴雨洪水的报道很少提及气候变化？](/articles/cdt/339224.md)
 
 7-1 [亮见｜老虎的屁股摸不得](/articles/cdt/339228.md)
@@ -598,6 +600,4 @@
 5-24 [每日一语 2024.5.23](/articles/cdt/340393.md)
 
 5-24 [北青深一度｜19岁女孩最后的人生：相亲、订婚、投河自杀](/articles/cdt/340394.md)
-
-5-24 [冰川思享号｜热点事件舆论一再反转，“信息茧房”背不动这个锅](/articles/cdt/340395.md)
 
