--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+7-1 [欧洲杯中文广告彰显谁才是“财神爷”？](/articles/dw/1025032.md)
+
+7-1 [德国今年武器出口有望再创下新纪录](/articles/dw/1025033.md)
+
 7-1 [泽连斯基再次呼吁盟友放宽乌克兰使用重型武器的范围](/articles/dw/1025034.md)
 
 7-1 [印尼羽毛球亚青赛 中国小将不幸猝死](/articles/dw/1025035.md)
@@ -596,8 +600,4 @@
 6-5 [纪念六四从香港移师海外](/articles/dw/1025330.md)
 
 6-5 [印度大选结果：莫迪虽胜犹败？](/articles/dw/1025331.md)
-
-6-5 [全球百万富翁数量创新高 德国、中国排名靠前](/articles/dw/1025332.md)
-
-6-5 [德国军舰航向南中国海执行印太部属](/articles/dw/1025333.md)
 
