--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-1 [回应越南对话意愿，菲律宾准备与河内就南中国海海底大陆架延伸问题进行谈判](/articles/voa/1014447.md)
+
 7-1 [聿文视界：三中全会前，中南海对官员再勒紧政治绞索](/articles/voa/1014448.md)
 
 7-1 [法国首轮议会选举中极右翼取得历史性胜利](/articles/voa/1014449.md)
@@ -598,6 +600,4 @@
 6-19 [美国：加沙停火可以结束以色列与真主党之间的冲突](/articles/voa/1014745.md)
 
 6-19 [美国中部和东北部热浪滚滚，多个州创下高温纪录](/articles/voa/1014746.md)
-
-6-19 [“美国应该寻求与中国经济上脱钩” 特朗普第二任期对华外交现端倪？](/articles/voa/1014747.md)
 
