--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-2 [南都周刊｜火箭坠落背后的民营航天企业](/articles/cdt/339206.md)
+
 7-2 [凤凰网｜我们所认识的胡友平](/articles/cdt/339211.md)
 
 7-2 [常识流通处｜审计署：66个县挪用学生营养餐补助偿还地方债](/articles/cdt/339212.md)
@@ -598,6 +600,4 @@
 5-25 [常识和洞见｜挣扎生活的年轻人，不是“群魔”](/articles/cdt/340375.md)
 
 5-26 [【CDT周报】第171期：伊朗人民欢庆“北京大学名誉教授”之死](/articles/cdt/340380.md)
-
-5-24 [知识分子｜那些“对赌”失败的青椒们](/articles/cdt/340385.md)
 
