--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+7-2 [在整体经济放缓的背景下，中国小型企业的工厂活动有所增加](/articles/voa/1014435.md)
+
+7-2 [推特上的中国：交接27年后，香港已经变成了一座普通中国城市了吗？](/articles/voa/1014436.md)
+
+7-2 [美国宣布制裁被控帮助贩毒集团洗钱者，包括两名中国公民](/articles/voa/1014437.md)
+
 7-2 [台北举行港反送中五周年追思会参与者：台湾人对中共威胁意识不足](/articles/voa/1014438.md)
 
 7-2 [日本成功发射旗舰火箭 将一颗地球观测卫星送入轨道](/articles/voa/1014439.md)
@@ -594,10 +600,4 @@
 6-19 [教宗方济各再向中国示好，呼吁为中国人民祷告](/articles/voa/1014733.md)
 
 6-19 [台湾总统执政满月记者会 赖清德:靠实力达成和平](/articles/voa/1014734.md)
-
-6-19 [中共二十大三中全会为什么拖这么久？会做什么？](/articles/voa/1014735.md)
-
-6-19 [美国跨党派国会代表团在印度与达赖喇嘛会晤](/articles/voa/1014736.md)
-
-6-19 [南中国海周一撞船事件 菲军方指控中国海警登船并夺取武器](/articles/voa/1014737.md)
 
