--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-2 [中方駁美限制對華投資先進技術：無助AI發展](/articles/dw/1025028.md)
+
 7-1 [意大利查获六吨中国“毒品前体”](/articles/dw/1025029.md)
 
 7-1 [忧中美贸易战 中国7月大豆进口将攀新高](/articles/dw/1025030.md)
@@ -598,6 +600,4 @@
 6-6 [连日暴雨令德国南部洪涝成灾](/articles/dw/1025326.md)
 
 6-6 [美國批准對台新軍售 27家軍火商齊聚台灣](/articles/dw/1025327.md)
-
-6-6 [五眼聯盟：中國積極吸收西方退役飛官訓練解放軍](/articles/dw/1025328.md)
 
