--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -17,7 +17,7 @@
 
 7-1 [小小声说话｜为什么中国媒体对华北暴雨洪水的报道很少提及气候变化？](/articles/cdt/339224.md)
 
-7-1 [亮见｜老虎的屁股摸不得](/articles/cdt/339228.md)
+7-1 [【404文库】亮见｜老虎的屁股摸不得](/articles/cdt/339228.md)
 
 7-1 [城市的地得｜献花就是“成为市民”的成人礼](/articles/cdt/339230.md)
 
