--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-2 [“马克龙主义”自残式失败，法国面临危险分水岭](/articles/nyt/1042623.md)
+
 7-2 [特朗普被裁定享有部分刑事起诉豁免权，这意味着什么](/articles/nyt/1042624.md)
 
 7-2 [中国推出以旧换新补贴刺激消费，民众不买账](/articles/nyt/1042625.md)
@@ -598,6 +600,4 @@
 3-25 [莫斯科音乐厅恐袭现场：“死神就在我背后喘着气”](/articles/nyt/1042921.md)
 
 3-25 [习近平的“新质生产力”能解决中国经济困境吗](/articles/nyt/1042922.md)
-
-3-25 [莫斯科恐袭粉碎普京对俄罗斯人的安全承诺](/articles/nyt/1042923.md)
 
