--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-2 [拜登团队无视退选呼声与质疑，坚持继续参选](/articles/nyt/1042622.md)
+
 7-2 [“马克龙主义”自残式失败，法国面临危险分水岭](/articles/nyt/1042623.md)
 
 7-2 [特朗普被裁定享有部分刑事起诉豁免权，这意味着什么](/articles/nyt/1042624.md)
@@ -598,6 +600,4 @@
 3-26 [金门撞船事件余波：中国海警加强巡逻，对赖清德施压](/articles/nyt/1042920.md)
 
 3-25 [莫斯科音乐厅恐袭现场：“死神就在我背后喘着气”](/articles/nyt/1042921.md)
-
-3-25 [习近平的“新质生产力”能解决中国经济困境吗](/articles/nyt/1042922.md)
 
