--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-2 [制造业调查显示6月份中国经济虽增长，但速度缓慢](/articles/voa/1014419.md)
+
+7-2 [美中合作之下 联大通过中国关于加强国际合作缩小AI能力建设差距的决议](/articles/voa/1014420.md)
+
 7-2 [习近平访问哈萨克斯坦，出席上合组织峰会](/articles/voa/1014421.md)
 
 7-2 [中国拟议中的《金融稳定法》是什么？](/articles/voa/1014422.md)
@@ -596,8 +600,4 @@
 6-20 [乌克兰称其能源设施在俄军袭击中受损](/articles/voa/1014717.md)
 
 6-20 [全美国第四次庆祝六月节](/articles/voa/1014718.md)
-
-6-20 [联合国人权高专办：以色列对加沙的空袭可能违反了“战争法”](/articles/voa/1014719.md)
-
-6-20 [推特上的中国：厄瓜多尔不再对中国人免签，“走线”时代结束？](/articles/voa/1014720.md)
 
