--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-2 [鹬蚌相争，渔翁得利：南太岛国凭借其战略位置获利多多](/articles/voa/1014418.md)
+
 7-2 [制造业调查显示6月份中国经济虽增长，但速度缓慢](/articles/voa/1014419.md)
 
 7-2 [美中合作之下 联大通过中国关于加强国际合作缩小AI能力建设差距的决议](/articles/voa/1014420.md)
@@ -598,6 +600,4 @@
 6-20 [专家：普京的访问使越南处于“困难境地”且“没有突破”](/articles/voa/1014716.md)
 
 6-20 [乌克兰称其能源设施在俄军袭击中受损](/articles/voa/1014717.md)
-
-6-20 [全美国第四次庆祝六月节](/articles/voa/1014718.md)
 
