--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-2 [害怕被“卡脖子” 中国IT正在“去美化”](/articles/dw/1025021.md)
+
 7-2 [客座评论： “三明治”里习近平的平衡术](/articles/dw/1025022.md)
 
 7-2 [外国法官辞职引争议 香港商法大环境受质疑](/articles/dw/1025023.md)
@@ -598,6 +600,4 @@
 6-6 [中国下一个赛场：商业太空竞争](/articles/dw/1025319.md)
 
 6-6 [德语媒体：中国独角兽为什么被美国反超？](/articles/dw/1025320.md)
-
-6-6 [林培瑞：我们为什么记得六四？](/articles/dw/1025321.md)
 
